--- a/localisation/english/MD_africa_events_l_english.yml
+++ b/localisation/english/MD_africa_events_l_english.yml
@@ -503,7 +503,7 @@
 
  # Niger - This section is a set of events in Niger. MNJ is a regional organization in Niger.
  mali.25.t: "MNJ Attack Outposts"
- mali.25.d: "The MNJ (ADD THE FULL NAME HERE BIRD) has unleased a series of devastating attacks on our military outposts in the west and northern sides of our country. The fighting has seen a large number of locals displaced due to the conflict and a number of our forces killed, wounded, or lost during the fighting. The Tuaregs fighting in Mali has started to spill over into our Tuareg regions causing ever-increasing tension which has culminated in the attacks on our regional outposts."
+ mali.25.d: "The MNJ (Niger Movement for Justice) has unleased a series of devastating attacks on our military outposts in the west and northern sides of our country. The fighting has seen a large number of locals displaced due to the conflict and a number of our forces killed, wounded, or lost during the fighting. The Tuaregs fighting in Mali has started to spill over into our Tuareg regions causing ever-increasing tension which has culminated in the attacks on our regional outposts."
  mali.25.a: "Mobilize the Military & Request Assitance"
  mali.25.b: "Destroy the Terrorists"
 
@@ -518,7 +518,7 @@
 
  # France - French response events to the events above
  # Response to mali.25 and the Attacks on the Outposts
- mali.28.t: "MNJ Attacks on Outposts"
+ mali.28.t: "MNJ Continue Attacks on Outposts"
  mali.28.d: "A series of strikes have been carried out by the Tuareg rebel group, the MNJ, in western Niger. A number of Nigerien soldiers have fallen to the fighting and Niger is preparing their own course of retaliation or their support of their own path. Some of our soldiers were caught in the crossfire as they were present on advisory duties. How should we respond?"
  mali.28.a: "We Must Take a Course of Action"
  mali.28.b: "Not Our Problem"
