--- a/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
@@ -182,3 +182,14 @@
  are_you_sure_thats_enough_DESC: "在统一阿拉伯人之前控制至少90%的阿拉伯国内生产总值"
  i_hate_arabs_NAME: "但为了充分披露，我不得不说，我讨厌阿拉伯人"
  i_hate_arabs_DESC: "在战争中击败阿拉伯联合共和国或阿拉伯共和国联邦"
+ its_all_francafrique_to_me_NAME: "对我来说，这都是法国非洲"
+ its_all_francafrique_to_me_DESC: "作为法国控制整个非洲"
+ the_return_to_charlesfort_st_louis_NAME: "查尔斯堡与圣路易斯回归"
+ the_return_to_charlesfort_st_louis_DESC: "作为波旁君主制法国占领南卡罗来纳州和德克萨斯州"
+ truly_better_than_napoleon_NAME: "确实比拿破仑更好"
+ truly_better_than_napoleon_DESC: "2010年之前，拥有伦敦、莫斯科、斯德哥尔摩、伊斯坦布尔、罗马、马德里、开罗和突尼斯。"
+ ils_sont_le_fleau_des_gens_occupes_NAME: "他们是忙碌的人的祸根"
+ ils_sont_le_fleau_des_gens_occupes_DESC: "作为法国成为唯一的超级大国"
+ he_who_has_iron_has_bread_NAME: "有铁就有面包。"
+ he_who_has_iron_has_bread_DESC: "作为共产主义法国在除警察和军队之外的所有法律上都拥有最高支出，并且欧洲所有现有国家也都是共产主义执政并且是法国的附属国。"
+ ace_communist_state_are_in_power_tt: "§Y$generic.Communist-State$§!掌权"
