--- a/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
@@ -69,11 +69,11 @@
  FIN_sako_materiel_manufacturer: "萨科"
  FIN_meyer_turku_naval_manufacturer: "迈尔图尔库"
  FRA_airbus_helicopters_tank_manufacturer: "空中客车直升机公司"
- FRA_nexter_materiel_manufacturer: "未来"
- FRA_nexter_tank_manufacturer: "未来"
+ FRA_nexter_materiel_manufacturer: "未来 - 材料部门"
+ FRA_nexter_tank_manufacturer: "未来 - 装甲车辆部门"
  FRA_dassault_aviation_aircraft_manufacturer: "达索航空"
- FRA_naval_group_naval_manufacturer: "海军集团"
- FRA_naval_group_naval_manufacturer2: "海军集团"
+ FRA_naval_group_naval_manufacturer: "海军集团 - 水面舰艇部门"
+ FRA_naval_group_naval_manufacturer2: "海军集团 - 潜艇部门"
  FRA_airbus_defence_aircraft_manufacturer: "空中客车防务"
  GEO_tbilisi_aircraft_manufacturing_tank_manufacturer: "第比利斯飞机制造厂"
  GEO_tbilisi_aircraft_manufacturing_materiel_manufacturer: "第比利斯飞机制造厂"
