--- a/localisation/simp_chinese/MD_focus_CHE_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHE_l_simp_chinese.yml
@@ -330,3 +330,5 @@
  chechnya_focus: "车臣国策树"
  CHE_gudermes3_idea_ser: "[CHE.GetFlag]古德梅斯特种部队大学"
  CHE_gudermes3_idea_ser_desc: "[SOV.GetFlag]俄罗斯特种部队大学是俄罗斯联邦第一所也是目前唯一一所为特种部队提供专业培训的私立教育机构。"
+ CHE_adam_kadyrov: "晋升我们的儿子"
+ CHE_adam_kadyrov_desc: "我们的儿子亚当将成为安全部门的负责人，我们还将为他的服务授予某些奖励。"
