--- a/localisation/simp_chinese/MD_focus_ETH_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ETH_l_simp_chinese.yml
@@ -52,7 +52,7 @@
  ETH_request_european_investments: "寻求欧洲投资"
  ETH_request_european_investments_desc: "我们应该与欧洲人达成一些协议。 他们有一些投资者正在等待进入埃塞俄比亚的市场。"
  ETH_befriend_france: "法埃亲善"
- ETH_befriend_france_desc: "如果我们要在经济最发达国家之一中扩大基础，法国是天生的盟友。"
+ ETH_befriend_france_desc: "法国是与经济最发达的国家之一结盟以获得更大基础的天然盟友。"
  ETH_establish_connections_with_tongji: "与中建总公司建立联系"
  ETH_establish_connections_with_tongji_desc: "在我们在亚的斯亚贝巴建立非洲联盟新总部的计划中，我们应该同几个建筑网络建立联系。中建集团跟随中国，提议帮助我们的事业。"
  ETH_expand_the_diplomatic_corps: "外交使团扩编"
@@ -70,9 +70,9 @@
  ETH_invite_european_armament_companies: "邀请欧洲军火公司"
  ETH_invite_european_armament_companies_desc: "拥有一些军火公司对于我国将是极其重要的。"
  ETH_defense_of_ethiopia: "埃塞俄比亚国防"
- ETH_defense_of_ethiopia_desc: "为了抵抗外国侵略，埃塞俄比亚奋战多年。即将进行的战争与以前打过的没多大区别。"
+ ETH_defense_of_ethiopia_desc: "埃塞俄比亚为维护独立免遭侵略而进行了多次战争。从现在起我们要进行的战争与我们多年来进行的战争并无不同。"
  ETH_expand_the_endf: "扩编埃塞俄比亚国防军"
- ETH_expand_the_endf_desc: "埃塞俄比亚国防军（ENDF）是非洲最强大的军事力量之一。我们有必要扩招军队来保持优势。"
+ ETH_expand_the_endf_desc: "埃塞俄比亚国防军是非洲最强大的军队之一。我们必须扩充我们的武装力量，以保持其优势。"
  ETH_expand_the_etaf: "扩招埃塞俄比亚空军"
  ETH_expand_the_etaf_desc: "我们空军急需扩招。但我们只有少数几个机场和过时的战斗机。这一现状需要改变。"
  ETH_secure_the_eritrean_border: "保卫与厄立特里亚接壤地区"
@@ -91,11 +91,11 @@
  ETH_modern_officer_corps: "现代化军官团"
  ETH_modern_officer_corps_desc: "对军官教育水平和技能的投资将会让我们真正获得一支现代化军官团。"
  ETH_expand_the_military: "扩军"
- ETH_expand_the_military_desc: "要想把我们的军队扩充到必要规模，就必须全面扩充我们所有的武装力量。"
+ ETH_expand_the_military_desc: "我们必须全面扩充所有军种，才能将我们的军队扩大到必要的规模。"
  ETH_aircraft_production: "飞机生产"
  ETH_aircraft_production_desc: "生产国产飞机不仅便宜，而且对经济更好！"
  ETH_secure_the_sudanese_border: "保卫与苏丹接壤地区"
- ETH_secure_the_sudanese_border_desc: "苏丹与埃塞俄比亚的关系因为南苏丹局势略微恶化了。如果战争波及到他们边境之外，我们应该为此秣马厉兵。"
+ ETH_secure_the_sudanese_border_desc: "由于南苏丹局势，苏丹与埃塞俄比亚的关系略显紧张。我们应该做好准备，以防战争不仅限于其境内。"
  ETH_secure_the_sudanese_border_TT: "沿苏丹边界添加3级§Y要塞§!"
  ETH_study_foreign_armor_designs: "研究外国装甲设计"
  ETH_study_foreign_armor_designs_desc: "研究外国的装甲设计，能让我们学到很多东西来发展自己的装甲车。"
@@ -184,8 +184,8 @@
  ETH_eritrea_tackle_seperatists_desc: "我们还没有完全应对分离主义者的潜在恐怖，他们出于某种原因想要回到旧的办事方式，如果我们不能用胡萝卜来说服他们，我们可能不得不用大棒来代替。"
  ETH_eritrea_federation: "厄立特里亚-埃塞俄比亚联邦法"
  ETH_eritrea_federation_desc: "我们两国之间的第一个联邦由于海尔塞拉西的帝国主义野心而解体，但相信现在是振兴它的正确时机。"
- ETH_eritrea_assembly: "支持统一党"
- ETH_eritrea_assembly_desc: "我们需要将联邦的支持者团结到一个政党之下，并在领导他们。"
+ ETH_eritrea_assembly: "允许埃塞俄比亚政党在厄立特里亚设立分支机构"
+ ETH_eritrea_assembly_desc: "虽然我们谴责阿费沃基巩固权力的行为，但也许有必要利用那里的权力结构来推动联邦化，通过允许我们自己的政党成立分支机构，然后在厄立特里亚境内竞选，支持《联邦法案》的埃塞俄比亚友好候选人几乎肯定会获胜，这样我们就可以实现将前厄立特里亚国家整合为新埃塞俄比亚的一个自治区的目标。"
  ETH_eritrea_lawbooks: "重修法律"
  ETH_eritrea_lawbooks_desc: "当前的厄立特里亚法律是原始的和过时的，没有人需要向政府登记以实践什么信仰为例，我们需要重新修订这些法律以更好地强调我们现在并将成为一个现代联邦的事实."
  ETH_eritrea_constitution: "推行埃塞俄比亚法律"
@@ -195,63 +195,11 @@
  ETH_stabilize_the_food_supply_TT: "§Y如果尽快不稳定食物供给，饥荒的影响就会扩大。§!\n"
  ETH_ERI_acceptance_100_TT: "当前§H一体化§!的接受度是§G100%§!"
  ETH_ERI_federalisation_100_TT: "当前§H联邦化§!的接受度是§G100%§!"
- ETH_need_0_5_billion_TT: "现有国库余额大于§H$0.50B§!"
- ETH_need_1_billion_TT: "现有国库余额大于§H$1B§!"
- ETH_need_1_5_billion_TT: "现有国库余额大于§H$1.50B§!"
- ETH_need_2_5_billion_TT: "现有国库余额大于§H$2.50B§!"
- ETH_eritrea_federal_parties_allowed_TT: "§G[ETH.GetName]将允许[ERI.GetName]作为一个自治区进行自由公正的选举!§!"
+ ETH_eritrea_federal_parties_allowed_TT: "将允许§Y[ERI.GetNameWithFlag]§!管理自己的事务和选举进程，同时保持§Y[ETH.GetNameWithFlag]§!对该地区的控制。\n\n地方选举定于未来几周内举行。"
  ETH_eritrea_locked_TT: "§R在选择厄立特里亚的命运之前，这个国策的影响是未知的！§!"
  ETH_annexation_support_TT: "整合进程 §G100%§!"
  ETH_eritrean_federal_acceptance_TT: "联邦化进程§G100%§!"
  ETH_federation_support_TT: "联邦支持率 §G100%§!"
- ETH_bozos_down_2_5_TT: "§Y镇压分裂势力§!: §R-2.5%§! (当前局势：§Y[?ETH_crackdown_on_bozos|2]%§!)"
- ETH_bozos_down_5_TT: "§Y镇压分裂势力§!: §R-5%§! (当前局势：§Y[?ETH_crackdown_on_bozos|2]%§!)"
- ETH_bozos_down_7_5_TT: "§Y镇压分裂势力§!: §R-7.5%§! (当前局势：§Y[?ETH_crackdown_on_bozos|2]%§!)"
- ETH_bozos_down_10_TT: "§Y镇压分裂势力§!: §R-10%§! (当前局势：§Y[?ETH_crackdown_on_bozos|2]%§!)"
- ETH_bozos_up_2_5_TT: "§Y镇压分裂势力§!: §G+2.5%§! (当前局势：§Y[?ETH_crackdown_on_bozos|2]%§!)"
- ETH_bozos_up_5_TT: "§Y镇压分裂势力§!: §G+5%§! (当前局势：§Y[?ETH_crackdown_on_bozos|2]%§!)"
- ETH_bozos_up_7_5_TT: "§Y镇压分裂势力§!: §G+7.5%§! (当前局势：§Y[?ETH_crackdown_on_bozos|2]%§!)"
- ETH_bozos_up_10_TT: "§Y镇压分裂势力§!: §G+10%§! (当前局势：§Y[?ETH_crackdown_on_bozos|2]%§!)"
- ETH_distribute_propaganda_down_2_5_TT: "§Y宣传扩散§!: §R-2.50%§! (当前局势：§Y[?ETH_propaganda_distribution|2]%§!)"
- ETH_distribute_propaganda_down_5_TT: "§Y宣传扩散§!: §R-5%§! (当前局势：§Y[?ETH_propaganda_distribution|2]%§!)"
- ETH_distribute_propaganda_down_7_5_TT: "§Y宣传扩散§!: §R-7.5%§! (当前局势：§Y[?ETH_propaganda_distribution|2]%§!)"
- ETH_distribute_propaganda_down_10_TT: "§Y宣传扩散§!: §R-10%§! (当前局势：§Y[?ETH_propaganda_distribution|2]%§!)"
- ETH_distribute_propaganda_up_2_5_TT: "§Y宣传扩散§!: §G+2.50%§! (当前局势：§Y[?ETH_propaganda_distribution|2]%§!)"
- ETH_distribute_propaganda_up_5_TT: "§Y宣传扩散§!: §G+5%§! (当前局势：§Y[?ETH_propaganda_distribution|2]%§!)"
- ETH_distribute_propaganda_up_7_5_TT: "§Y宣传扩散§!: §G+7.5%§! (当前局势：§Y[?ETH_propaganda_distribution|2]%§!)"
- ETH_distribute_propaganda_up_10_TT: "§Y宣传扩散§!: §G+10%§! (当前局势：§Y[?ETH_propaganda_distribution|2]%§!)"
- ETH_amharic_speakers_down_2_5_TT: "§Y阿姆哈拉语传播§!: §R-2.50%§! (当前局势： §Y[?ETH_amharic_speakers|2]%§!)"
- ETH_amharic_speakers_down_5_TT: "§Y阿姆哈拉语传播§!: §R-5%§! (当前局势： §Y[?ETH_amharic_speakers|2]%§!)"
- ETH_amharic_speakers_down_7_5_TT: "§Y阿姆哈拉语传播§!: §R-7.5%§! (当前局势： §Y[?ETH_amharic_speakers|2]%§!)"
- ETH_amharic_speakers_down_10_TT: "§Y阿姆哈拉语传播§!: §R-10%§! (当前局势： §Y[?ETH_amharic_speakers|2]%§!)"
- ETH_amharic_speakers_up_2_5_TT: "§Y阿姆哈拉语传播§!: §G+2.50%§! (当前局势： §Y[?ETH_amharic_speakers|2]%§!)"
- ETH_amharic_speakers_up_5_TT: "§Y阿姆哈拉语传播§!: §G+5%§! (当前局势： §Y[?ETH_amharic_speakers|2]%§!)"
- ETH_amharic_speakers_up_7_5_TT: "§Y阿姆哈拉语传播§!: §G+7.5%§! (当前局势： §Y[?ETH_amharic_speakers|2]%§!)"
- ETH_amharic_speakers_up_10_TT: "§Y阿姆哈拉语传播§!: §G+10%§! (当前局势： §Y[?ETH_amharic_speakers|2]%§!)"
- ETH_bozos_down_2_5_TT2: "§Y镇压分裂势力§!: §R-2.5%§! (当前局势：§Y[?ETH_crackdown_on_bozos2|2]%§!)"
- ETH_bozos_down_5_TT2: "§Y镇压分裂势力§!: §R-5%§! (当前局势：§Y[?ETH_crackdown_on_bozos2|2]%§!)"
- ETH_bozos_down_7_5_TT2: "§Y镇压分裂势力§!: §R-7.5%§! (当前局势：§Y[?ETH_crackdown_on_bozos2|2]%§!)"
- ETH_bozos_down_10_TT2: "§Y镇压分裂势力§!: §R-10%§! (当前局势：§Y[?ETH_crackdown_on_bozos2|2]%§!)"
- ETH_bozos_up_2_5_TT2: "§Y镇压分裂势力§!: §G+2.5%§! (当前局势：§Y[?ETH_crackdown_on_bozos2|2]%§!)"
- ETH_bozos_up_5_TT2: "§Y镇压分裂势力§!: §G+5%§! (当前局势：§Y[?ETH_crackdown_on_bozos2|2]%§!)"
- ETH_bozos_up_7_5_TT2: "§Y镇压分裂势力§!: §G+7.5%§! (当前局势：§Y[?ETH_crackdown_on_bozos2|2]%§!)"
- ETH_bozos_up_10_TT2: "§Y镇压分裂势力§!: §G+10%§! (当前局势：§Y[?ETH_crackdown_on_bozos2|2]%§!)"
- ETH_distribute_propaganda_down_2_5_TT2: "§Y镇压分裂势力§!: §R-2.50%§! (当前局势：§Y[?ETH_propaganda_distribution2|2]%§!)"
- ETH_distribute_propaganda_down_5_TT2: "§Y镇压分裂势力§!: §R-5%§! (当前局势：§Y[?ETH_propaganda_distribution2|2]%§!)"
- ETH_distribute_propaganda_down_7_5_TT2: "§Y镇压分裂势力§!: §R-7.5%§! (当前局势：§Y[?ETH_propaganda_distribution2|2]%§!)"
- ETH_distribute_propaganda_down_10_TT2: "§Y镇压分裂势力§!: §R-10%§! (当前局势：§Y[?ETH_propaganda_distribution2|2]%§!)"
- ETH_distribute_propaganda_up_2_5_TT2: "§Y镇压分裂势力§!: §G+2.50%§! (当前局势：§Y[?ETH_propaganda_distribution2|2]%§!)"
- ETH_distribute_propaganda_up_5_TT2: "§Y镇压分裂势力§!: §G+5%§! (当前局势：§Y[?ETH_propaganda_distribution2|2]%§!)"
- ETH_distribute_propaganda_up_7_5_TT2: "§Y镇压分裂势力§!: §G+7.5%§! (当前局势：§Y[?ETH_propaganda_distribution2|2]%§!)"
- ETH_distribute_propaganda_up_10_TT2: "§Y镇压分裂势力§!: §G+10%§! (当前局势：§Y[?ETH_propaganda_distribution2|2]%§!)"
- ETH_amharic_speakers_down_2_5_TT2: "§Y阿姆哈拉语传播§!: §R-2.50%§! (当前局势： §Y[?ETH_amharic_speakers2|2]%§!)"
- ETH_amharic_speakers_down_5_TT2: "§Y阿姆哈拉语传播§!: §R-5%§! (当前局势： §Y[?ETH_amharic_speakers2|2]%§!)"
- ETH_amharic_speakers_down_7_5_TT2: "§Y阿姆哈拉语传播§!: §R-7.5%§! (当前局势： §Y[?ETH_amharic_speakers2|2]%§!)"
- ETH_amharic_speakers_down_10_TT2: "§Y阿姆哈拉语传播§!: §R-10%§! (当前局势： §Y[?ETH_amharic_speakers2|2]%§!)"
- ETH_amharic_speakers_up_2_5_TT2: "§Y阿姆哈拉语传播§!: §G+2.5%§! (当前局势： §Y[?ETH_amharic_speakers2|2]%§!)"
- ETH_amharic_speakers_up_5_TT2: "§Y阿姆哈拉语传播§!: §G+5%§! (当前局势： §Y[?ETH_amharic_speakers2|2]%§!)"
- ETH_amharic_speakers_up_7_5_TT2: "§Y阿姆哈拉语传播§!: §G+7.5%§! (当前局势： §Y[?ETH_amharic_speakers2|2]%§!)"
- ETH_amharic_speakers_up_10_TT2: "§Y阿姆哈拉语传播§!: §G+10%§! (当前局势： §Y[?ETH_amharic_speakers2|2]%§!)"
  ethiopia.1.t: "埃塞俄比亚贷款请求"
  ethiopia.1.d: "埃塞俄比亚政府试图通过国际公司的援助，通过使用政府投资加强地方和区域经济部门，使国民经济重回正轨。\n\n现在，埃塞俄比亚已向财政部请求进一步向埃塞俄比亚工业和经济发展部门提供政府贷款。似乎这对我们政府没有什么好处，但我们的商人警告我们，如果我们不给埃塞俄比亚贷款，其他人也会。如果我们的企业因为对国家的敌对态度而被拒绝，其他公司肯定会被接受。"
  ethiopia.1.a: "我们将发放额外贷款。"
@@ -289,28 +237,16 @@
  ethiopia.10.a: "这将有助于我们的经济"
  ETH_railway_repaired_tt: "修复埃塞俄比亚－吉布提铁路"
  ETH_railway_destroyed_flg: "埃塞俄比亚－吉布提铁路遭到破坏"
- ethiopia.11.t: "厄立特里亚人民解放阵线重建"
- ethiopia.11.d: "自第二次世界大战以来，厄立特里亚第二次发现自己处于埃塞俄比亚的占领之下。许多高级政治家和军事领导人流亡国外，并在附近的苏丹重建了厄立特里亚解放阵线。\n\n厄立特里亚独立后，原来的厄立特里亚解放阵线改组为人民民主与正义阵线，并担任厄立特里亚的执政党，直到 我们解散了它。\n\n然而，由于伊萨亚斯目前在亚的斯亚贝巴被软禁，由他的总统顾问耶玛尼·格布雷阿布接任，目前他是厄立特里亚解放阵线政治部门的负责人。"
- ethiopia.11.a: "他最好留在那里"
- ethiopia.12.t: "厄立特里亚人民解放阵线突袭军事车队"
- ethiopia.12.d: "在对我们在厄立特里亚地区的一个军事车队的一次意外袭击中，整个车队被歼灭，其货物被盗。对这次伏击负责的厄立特里亚解放阵线在任何增援部队到达现场之前就逃走了。"
- ethiopia.12.a: "他们将需要更多资源来阻止我们！"
+ ethiopia.11.t: "厄立特里亚人民解放阵线再武装！"
+ ethiopia.11.d: "自第二次世界大战结束以来，厄立特里亚第二次被埃塞俄比亚占领。许多前高级政客和军事领导人设法逃离埃塞俄比亚军队，流亡到苏丹。在那里，他们似乎重建了厄立特里亚解放阵线。\n\n厄立特里亚于1991年从埃塞俄比亚独立后不久，最初的厄立特里亚人民解放阵线改组为人民民主和正义阵线，并一直是厄立特里亚唯一的合法政党，直到最近解散。据报道，自从伊萨亚斯最近被捕并随后被软禁以来，他的总统顾问耶玛尼·格布雷阿布接管了该党的残余势力，并正在召集残余势力再次在厄立特里亚人民解放阵线的旗帜下武装起来。"
+ ethiopia.11.a: "尽管他们尽了最大努力，但我们不会动摇。"
  ethiopia.13.t: "伊萨亚斯·阿费沃基被捕"
- ethiopia.13.d: "随着厄立特里亚最后一个据点的陷落，我们发现伊萨亚斯·阿费沃基和他最忠诚的部下正试图逃往邻国苏丹。虽然他的保镖打得很好，但人数太少，所以伊萨亚斯很快发现自己就在前往亚的斯亚贝巴的路上，他将在那里等待审判。\n\n直到那时他才被软禁。"
- ethiopia.13.a: "软禁他"
+ ethiopia.13.d: "当阿斯马拉周围的枪声平息，厄立特里亚最后的坚定捍卫者放下武器时，伊萨亚斯·阿费沃基和他最忠诚的部下已经乘着一支相对不起眼​​的车队前往邻国苏丹，这是逃避埃塞俄比亚法律制裁的最后一搏。他的保镖们进行了他们所能召集的一点点抵抗，但人数显然不占优势。\n\n伊萨亚斯·阿费沃基随即被逮捕并被塞进一辆开往亚的斯亚贝巴的军车，他的命运仍不确定，但在此之前，他仍被软禁，由埃塞俄比亚最精锐的士兵看守。"
+ ethiopia.13.a: "正义必将得到伸张。"
  ethiopia.14.t: "审判伊萨亚斯·阿费沃基"
- ethiopia.14.d: "今天是对厄立特里亚前总统伊萨亚斯·阿费沃基的审判。在他自己的大声抗议下，他被带到法庭，并在他的判决已经确定的情况下指控法庭腐败和不公正的审判。许多国际记者都同意这一点，但今天谁也救不了他。\n\n无论如何，法官们同意我们的决定，这将是......？"
- ethiopia.14.a: "判他死刑"
+ ethiopia.14.d: "今天是厄立特里亚前领导人伊萨亚斯·阿费沃基的审判日。在已经喧闹的法庭审理中，伊萨亚斯的声音盖过了所有人，他抗议自己的处境。当他走进法庭时，摄像机转向他，他反驳了法庭和埃塞俄比亚司法系统对腐败的指控，声称审判不过是一场马戏团表演，因为他的命运早在审理之前就已经决定了。\n\n许多国际记者和观察员对他的处境表示同情，也对他的担忧表示认同，但腐败和操纵审判的呼声无法挽救厄立特里亚的所谓暴君。经过多日的审议，在审查了所有证据后，他很快被判有罪，他的判决结果是……"
+ ethiopia.14.a: "死刑"
  ethiopia.14.b: "终身监禁"
- ethiopia.15.t: "审判伊萨亚斯·阿费沃基"
- ethiopia.15.d: "今天是对厄立特里亚前总统伊萨亚斯·阿费沃基的审判。他在庭上坐了很长时间，但法官最终做出了决定，伊萨亚斯被判终身监禁。\n\n这句话对任何人来说都不足为奇，他将尽快被转移到厄立特里亚一方的监狱。"
- ethiopia.15.a: "他应得的"
- ethiopia.16.t: "审判伊萨亚斯·阿费沃基"
- ethiopia.16.d: "今天是对厄立特里亚前总统伊萨亚斯·阿费沃基的审判。 他在庭上坐了很长时间，但法官最终做出了决定，伊萨亚斯将面临死刑。\n\n埃塞俄比亚自1998年以来就没有做出过这个判决，当时一名厄立特里亚商人枪杀了一位广受欢迎的埃塞俄比亚将军，因此获刑。\n\n几乎是宣判刚一结束，武装警察就将他押出了面临宣判的大厅。"
- ethiopia.16.a: "他是个坏人"
- ethiopia.17.t: "厄立特里亚人民解放阵线袭击当地警察局"
- ethiopia.17.d: "当天中午，三辆卡车停在警察局前，武装人员立即向大楼里可怜的警察开火。\n\n他们无一幸免，武器保险箱被洗劫一空。武装人员一来就逃走了。\n\n当天晚些时候，厄立特里亚人民解放阵线上传了一段视频，他们声称对那次袭击负责。"
- ethiopia.17.a: "我们迟早会找到他们"
  ethiopia.18.t: "泽拉·塞拉西返回埃塞俄比亚"
  ethiopia.18.d: "泽拉·塞拉西回归，再次成为埃塞俄比亚国王。祝他长寿，让他的国家在他伟大的领导下繁荣昌盛。"
  ethiopia.18.a: "我们欢迎他"
@@ -378,8 +314,6 @@
  ETH_eritrean_federalisation_underway_desc: "虽然联邦化正在进行中，但随着谈判的进行，预计会有一个不错的移民因素。"
  ETH_idea_messebo: "梅瑟博水泥"
  ETH_idea_messebo_desc: ""
- ETH_CSCEC: "CSCEC投资"
- ETH_CSCEC_desc: ""
  ETH_diplomacy_corps: "外交使团"
  ETH_diplomacy_corps_desc: ""
  ETH_aircraft_investments: "埃塞俄比亚航空"
@@ -396,27 +330,27 @@
  ETH_integration_process_tick: "整合进程"
  ETH_full_integration: "致力于完全整合"
  ETH_fund_amharic_schools: "强制阿姆哈拉语学习"
- ETH_fund_amharic_schools_desc: "我们需要§R$1.00 billionB§!资助厄立特里亚人民的阿姆哈拉语课程。"
+ ETH_fund_amharic_schools_desc: "资助阿姆哈拉语学校的费用估计约为§Y$1.00B§!。确保§Y[ERI.GetAdjective]§!人民通晓我们的通用语是当务之急，因为如果他们听不懂我们的话，我们又怎么能治理他们呢？"
  ETH_distribute_propaganda: "宣传战"
- ETH_distribute_propaganda_desc: "我们需要§R$0.50B§!完成在厄立特里亚的宣传扩散。"
+ ETH_distribute_propaganda_desc: "虽然有些消息代价高昂，但“行为端正，否则”这条信息在广告牌上张贴起来却相当便宜。新吞并领土的广告牌上可以贴满这条信息，价格仅为§Y$0.5B§!."
  ETH_utilise_informants: "利用线人网络"
- ETH_utilise_informants_desc: "我们需要§R$1.00B§!以贿赂线人在厄立特里亚民众中找到煽动者。"
+ ETH_utilise_informants_desc: "线人的费用很高，但值得庆幸的是，§Y[ERI.GetName]§!很穷，因此不会花费我们太多钱，我们的占领指挥部估计我们需要拨款 §R$1.00B§!在用在改用的地方。"
  ETH_harsh_crackdowns: "严厉镇压分裂势力"
- ETH_harsh_crackdowns_desc: "我们需要§R$1.00B§!镇压厄立特里亚民众中的持不同政见者。"
+ ETH_harsh_crackdowns_desc: "在我们新成立的§Y[ETH.GetName]§!异议是受欢迎的，毕竟这是铲除麻烦制造者最快的方法。通过分配适当的资源，我们可以在民众中开展打击异议的行动。"
  ETH_make_arrests: "逮捕直言不讳的批评者"
- ETH_make_arrests_desc: "我们需要§R$1.00B§!逮捕那些最直言不讳地反对我们政权的人。"
+ ETH_make_arrests_desc: "“人人都是批评家”，这句话有些疯狂，暗示人人平等。但事实并非如此，解决这一困境最简单的办法就是逮捕那些对我们和我们的政府持负面批评态度的人。"
  ETH_eritrean_federalisation_category: "厄立特里亚的联邦化进程"
  ETH_eritrean_federalisation_category_desc: "我们目前正在努力使厄立特里亚人民融入我们的国家，这可能是一条通往最终目的地的艰难道路，但如果我们要成为一个旗帜下的国家，这是必须的。\n\n\n§H当前联邦化进程§!: §G[?ETH_eritrean_federation_process|2]%§!\n\n§H阿姆哈拉语传播§!: §G[?ETH_amharic_speakers2|2]%§!\n\n§H宣传扩散§!: §G[?ETH_propaganda_distribution2|2]%§!\n\n§H镇压分裂势力§!: §G[?ETH_crackdown_on_bozos2|2]%§!"
  ETH_federalisation_process_tick: "联邦化进程"
  ETH_full_federalisation: "签署第二联邦法案"
  ETH_encourage_language_schools: "向阿姆哈拉语学校提供更多资金"
- ETH_encourage_language_schools_desc: "我们需要§R$1.00B§!用于宣传阿姆哈拉语学校的广告活动。"
+ ETH_encourage_language_schools_desc: "资助阿姆哈拉语学校的费用估计约为 §Y$1.0B§!。帮助§Y[ERI.GetAdjective]§!人民通晓我们的通用语非常重要，因为如果他们听不懂我们的话，我们又怎么能治理他们呢？"
  ETH_show_off_benefits_federation: "炫耀联邦化的好处"
- ETH_show_off_benefits_federation_desc: "我们需要§R$2.50B§!向人民炫耀联邦法案的好处。"
+ ETH_show_off_benefits_federation_desc: "广告牌、传单、海报和贴纸；所有这些都很昂贵，确切地说，大约需要§Y$2.50B§!。但如果我们要适当地展示联邦法案的好处，这是一项必要的投资。"
  ETH_falsify_evidence: "伪造不当行为的证据"
- ETH_falsify_evidence_desc: "我们需要§R$1.00B§!伪造证据来反对那些阻碍变革的人。"
+ ETH_falsify_evidence_desc: "到最后，煽动者必须下台，如果他们不违法的话，最好的办法就是提出……“另类事实”，有人说这是伪造证据，但他们可以在狱中这样说。"
  ETH_deport_agitators: "驱逐煽动者"
- ETH_deport_agitators_desc: "我们需要§R$1.50B§!驱逐那些最直言不讳地反对我们政权的人。"
+ ETH_deport_agitators_desc: "最坏的人是无法被改造或再教育的，他们只会成为别人的问题，通过利用军事单位，我们将把那些违反我们新法律的人驱逐出境。"
  ETH_chi_investments_category: "中国投资项目"
  ETH_chi_investments_category_desc: "中国愿意为我们建设一些几乎不花钱的特殊项目。"
  ETH_european_investments_category: "欧洲投资项目"
@@ -440,3 +374,35 @@
  ETH_addis_ababa_djibouti_railway_desc: "埃塞俄比亚95%以上的贸易经过吉布提，这对我们的经济至关重要。通过现代化铁路将我们的首都与吉布提直接连接起来，我们可以大大减少货物的运输时间和成本。"
  ETH_construct_addis_ababa_djibouti_railway: "亚的斯亚贝巴 - 吉布提铁路建设"
  ETH_construct_addis_ababa_djibouti_railway_desc: "亚的斯亚贝巴 - 吉布提铁路的建设工作已经开始。"
+ ETH_provide_assistance_to_somalia: "向索马里提供援助"
+ ETH_provide_assistance_to_somalia_desc: "伊斯兰法庭联盟目前正在威胁我们的边境。我们应该派遣军队和支持[SOM.GetName]，这样我们才能在极端伊斯兰势力成为我们的问题之前将其击败。"
+ ETH_make_a_choice_FT_TT: "§Y$ETH_eritrea_start$§!国策分支即将§Y解锁§!，必须就§Y厄立特里亚§!未来的做出选择。"
+ ETH_eritrea_assembly_TT: "你已经做了一件蠢事，因此挣了点钱。"
+ ETH_eritrea_integration_trigger_TT: "已经敲定在§Y$ethiopia.24.t$§!选择§Y整合§!路线或者选择随后§R解散§!议会。"
+ ETH_eritrea_federation_trigger_TT: "已经敲定在§Y$ethiopia.24.t$§!选择§Y联邦化§!路线或者选择随后§G联邦化§!。"
+ ETH_blocked_from_ERI_decisions_INT_TT: "未被阻止进一步实施§Y整合§!政策"
+ ETH_block_from_ERI_decisions_INT_TT: "将被§R阻止§!进一步实施§Y整合§!"
+ ETH_federalise_ERI_flip_TT: "目前没有运行制定§Y整合§!操作的决议"
+ ETH_blocked_from_ERI_decisions_FED_TT: "未被阻止进一步实施§Y联邦化§!政策"
+ ETH_block_from_ERI_decisions_FED_TT: "将被§R阻止§!进一步实施§Y联邦化§!"
+ ETH_dissolve_ERI_assembly_flip_TT: "目前没有运行制定§Y联邦化§!操作的决议"
+ ETH_BANNED_RELEASE_ERI_TOOLTIP: "§Y[ROOT.GetNameWithFlag]§!可能通过选择适当的决议进行§Y联邦化§!以释放§Y[FROM.GetNameWithFlag]§!。\n\n如果该决议不可用，§Y[FROM.GetNameWithFlag]§!将永远处于§Y[ROOT.GetAdjective]§!统治之下。"
+ ETH_locked_federalisation_TT: "当§Y联邦化进程§!启动期间§Y[ETH.GetNameWithFlag]§!将被§R禁止§!吞并§Y[ERI.GetNameWithFlag]§!"
+ ETH_locked_annexation_TT: "当§Y整合进程§!启动期间§Y[ETH.GetNameWithFlag]§!将被§R禁止§!释放§Y[ERI.GetNameWithFlag]§!"
+ update_ETH_amharic_speakers_TT: "§Y阿姆哈拉语推广§!：[?ETH_amharic_change|2+]%（当前§Y阿姆哈拉语推广§!：[?ETH_amharic_speakers|2Y]%）"
+ update_ETH_propaganda_distribution_TT: "§Y宣传分发§!：[?ETH_propaganda_change|2+]%（当前§Y宣传分发§!：[?ETH_propaganda_distribution|2Y]%）"
+ update_ETH_bozo_crackdown_TT: "§Y镇压分裂分子§!：[?ETH_crackdown_change|2+]%（当前§Y镇压分裂分子§!：[?ETH_crackdown_on_bozos|2Y]%）"
+ ETH_looming_famine_desc: "饥荒仍隐约可见。如果我们不尽快稳定国家局势，我们很可能会看到大范围的饥荒。我们与厄立特里亚的战争以及沿海土地的丧失只会进一步加剧这一问题。"
+ ETH_idea_stabilized_food_supply_desc: "粮食供应终于稳定下来，我们可以继续养活和供应我们的人口。安全稳定的粮食供应对于我们国家的发展至关重要。"
+ ETH_idea_famine_strikes_desc: "饥荒袭击了整个国家！我们必须把注意力转向国内，解决粮食供应问题，以免情况继续恶化，国家遭受巨大损失。"
+ ETH_idea_cscec_desc: "中国建筑工程总公司已开始在我国进行投资。它继续帮助我们发展，但代价是，它使我们在该地区更容易受到中国的影响。"
+ ETH_ethiopian_intervention_forces: "埃塞俄比亚干预部队"
+ ETH_ethiopian_intervention_forces_desc: ""
+ ETH_educating_the_people_desc: ""
+ ETH_full_integration_desc: "当§Y[ERI.GetAdjective]§!人民牢牢受制于我们之后，现在是消灭从前被称为§Y[ERI.GetName]§!的虚假国家的最后残余之时了。"
+ ETH_federalise_ERI_flip: "开始§Y联邦化§!进程"
+ ETH_federalise_ERI_flip_desc: "继续维持占领§Y[ERI.GetAdjective]§!已不再可行。那里的人民迫切要求有代表权，我们应该建立一个符合我们自己观点的新政府。"
+ ETH_federalisation_process_tick_desc: "每§Y30天§!我们都会更新我们的进展，以使§Y[ERI.GetAdjective]§!人民和系统符合我们自己的思维方式。"
+ ETH_full_federalisation_desc: "在§Y[ERI.GetAdjective]§!人民同意联邦法案后，该法案即可正式签署成为法律。然而，这将阻止§Y[ETH.GetNameWithFlag]§!吞并该地区。"
+ ETH_dissolve_ERI_assembly_flip: "解散§Y[ERI.GetNameWithFlag]§!议会"
+ ETH_dissolve_ERI_assembly_flip_desc: "联邦化的实验是一个可怕的失败，§Y[ERI.GetAdjective]§!人民实在是一个太大的不稳定因素，我们不允许他们享有我们为他们规划的自治权，我们必须解散他们的议会，击垮“自治”谈判。"
