--- a/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
@@ -3069,7 +3069,7 @@
  PER_political.144.t: "伊朗需要我们的帮助"
  PER_political.144.d: "伊朗请求我们帮助迫使库尔德斯坦屈服，而他们请求我们对他们实施禁运。"
  PER_political.144.a: "我不明白为什么不呢？"
- PER_political.144.b: "和我们无关。"
+ PER_political.144.b: "和我们无关"
  PER_political.1441.t: "土耳其同意！"
  PER_political.1441.d: "应我们的要求，土耳其同意对库尔德斯坦实施禁运。我们也将采取同样的做法，同时向库尔德叛军发出再一次警告。"
  PER_political.1441.a: "发送最终警告"
