--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -1920,3 +1920,8 @@
  BSH_inet: "巴什基尔互联网"
  BSH_anti_corruption: "反腐败政策"
  BSH_new_roads: "新道路"
+ CRM_poklonskaya_idea: "检察官纳塔利娅·波克隆斯卡娅"
+ CRM_anti_corrupt: "反腐败斗争"
+ CRM_anti_corrupt_desc: "我们的新检察官已准备好领导所有情况下的反腐败斗争。"
+ CRM_close_medjlis: "禁止克里米亚鞑靼人民族议会"
+ CRM_close_medjlis_desc: "克里米亚鞑靼人民族议会正在积极破坏我们在克里米亚的活动，我们将禁止他们在我们地区开展活动。"
