--- a/localisation/simp_chinese/MD_traits_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_traits_l_simp_chinese.yml
@@ -473,3 +473,5 @@
  Cat_VLS_Land_System_research: "垂直发射对地系统研究速度"
  Cat_Torpedoes_research: "鱼雷研究速度"
  Cat_Landing_Craft_research: "登陆艇研究速度"
+ actor: "演员"
+ former_foreign_minister: "前外交部长"
