--- a/localisation/simp_chinese/MD_wars_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_wars_l_simp_chinese.yml
@@ -114,3 +114,5 @@
  WAR_NAME_JPK_JAP: "第三次日本内战"
  WAR_NAME_JPK_JPW: "第三次日本内战"
  WAR_NAME_JPK_JPC: "第三次日本内战"
+ WAR_NAME_SOM_SHB: "索马里极端主义起义"
+ WAR_NAME_SHB_SNA: "索马里极端主义起义"
