--- a/localisation/simp_chinese/ledger_l_simp_chinese.yml
+++ b/localisation/simp_chinese/ledger_l_simp_chinese.yml
@@ -22,7 +22,7 @@
  LEDGER_COMMAND_POWER_TT: "每日指挥点数：[?this.command_power_daily|+=]"
  LEDGER_LAND_DOCTRINE_LEVEL: "陆军学说等级"
  LEDGER_NAVY: "舰船"
- LEDGER_AIR: "空军联队"
+ LEDGER_AIR: "已部署空军人力"
  LEDGER_ROCKET_SITES: "导弹建筑"
  LEDGER_CIV_FACTORIES_TT: "建造速度加成：[?this.modifier@production_speed_buildings_factor|+=%]\n可用民用工厂：[?this.effective_civilian_factories|Y0]"
  LEDGER_CONSUMER_GOODS_TT: "税收成本所消耗的民用工厂：[?this.consumer_goods_factories|0Y]"
