--- a/localisation/simp_chinese/traits_l_simp_chinese.yml
+++ b/localisation/simp_chinese/traits_l_simp_chinese.yml
@@ -1160,3 +1160,8 @@
  shahanshah: "万王之王，雅利安之光"
  educator: "教育家"
  doesnt_understand_economy: "不通经济"
+ agronomist: "农学家"
+ public_health_admin: "公共卫生行政"
+ former_finance_minister: "前财政部长"
+ transitional_government: "过渡政府"
+ transitional_government_TT: "作为一个过渡政府，§Y[THIS.GetNameWithFlag]§!无法推行任何外交政策，直到建立一个稳定的政府为止。"
