--- a/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
@@ -845,3 +845,7 @@
  t72b3_decision: "生成T-72B3设计"
  t72b3_m2016_decision: "生成T-72B3m2016设计"
  t80bvm_decision: "生成T-80BVM设计"
+ command_power_more_than_30: "£command_power §H30§!"
+ command_power_more_than_30_blocked: "£command_power §R30§!"
+ command_power_more_than_15: "£command_power §H15§!"
+ command_power_more_than_15_blocked: "£command_power §R15§!"
