--- a/localisation/simp_chinese/MD_middle_east_content_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_middle_east_content_l_simp_chinese.yml
@@ -1102,3 +1102,4 @@
  hybrid_regime_emerging_desc: "尽管举行选举，该国政府仍使用一系列非正式措施来确保这些选举为执政党赢得多数席位。 因此，通过选举手段实现政权更迭是极其困难的。"
  concede_rojava: "割让东北"
  concede_rojava_desc: "叙利亚东北部占多数的库尔德人尚未加入反对我们政府的民众起义。 将我们的军队从该地区撤出并让库尔德民兵占领它可能符合我们的最佳利益，而不是冒着被叙利亚自由军击败的风险继续扩大我们的力量。"
+ deploy_military_fra_advisors_tt: "[FROM.GetAdjective]的反恐训练将更加有效，但我们的顾问可能会成为圣战武装分子的目标。[ROOT.GetNameWithFlag]的新反恐政策进一步改善了这种情况。"
