--- a/localisation/simp_chinese/MD_new_traits_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_new_traits_l_simp_chinese.yml
@@ -175,3 +175,7 @@
  dumbass_trait: "不懂经济学"
  ex_engineer: "背景：工程师"
  ex_engineer_desc: "受过工程师教育，此人具有扎实的基础，可以理解复杂的管理系统。"
+ pro_taliban: "亲塔利班"
+ pro_taliban_desc: "是塔利班的积极或秘密支持者。"
+ taliban_militant: "背景：塔利班武装分子"
+ taliban_militant_desc: "此人曾是塔利班有关连或直接受其指挥的武装分子。"
