--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -2489,19 +2489,19 @@
  CAM.Western_Autocracy: "£generic_Western_Autocracy_small 喀麦隆人民民主运动"
  CAM.Western_Autocracy_desc: "亲西方专制派 - 喀麦隆人民民主运动是喀麦隆最大的政党，该党自60年代独立以来一直主导着喀麦隆的政治。它最初被命名为喀麦隆民族联盟，但后来于1985年更名。"
  CAR.liberalism: "£generic_liberalism_small 国家统合党"
- CAR.liberalism_desc: ""
- CAR.socialism: "£generic_socialism_small 中非人民解放运动"
- CAR.socialism_desc: ""
+ CAR.liberalism_desc: "民族团结党是中非共和国的一个自由党，成立于1997年。该党支持一系列西方导向的自由主义政策。"
+ CAR.socialism: "£generic_socialism_small KNK全国联合会"
+ CAR.socialism_desc: "KNK全国联合会是围绕和支持弗朗索瓦·博齐泽的政党的顶峰。他们直到2009年才最终形成一个统一的政党，但他们是支持博齐泽竞选总统的政党联盟。这些政党与没有“理论”的社会民主主义和劳工主义意识形态紧密结合。博齐泽表示，KNK是一个具有社会民主传统的工人政党。其目标是动员人民、提高认识并走向发展，即通过工作消除贫困。只有通过工作，我们才能改变这个国家的现状。”"
  CAR.Neutral_conservatism: "£generic_Neutral_conservatism_small 民主与发展运动"
- CAR.Neutral_conservatism_desc: ""
- CAR.neutral_Social: "£generic_neutral_Social_small 中非民主集会"
- CAR.neutral_Social_desc: ""
+ CAR.Neutral_conservatism_desc: "民主与发展运动是一个社会保守党，由前总统大卫·达科于1993年成立。该党最著名的是反对安热-费利克斯·帕塔塞和中非人民解放运动。"
+ CAR.neutral_Social: "£generic_neutral_Social_small 中非人民解放运动"
+ CAR.neutral_Social_desc: "中非人民解放运动是中非共和国主要政党之一，是安热-费利克斯·帕塔塞的政党。该党坚持民主社会主义、社会民主主义和共和主义的原则。它还拥护一种有点口语化的帕塔塞主义意识形态，指的是安热-费利克斯·帕塔塞的意识形态。"
  CAR.Neutral_green: "£generic_Neutral_green_small 社会民主党"
- CAR.Neutral_green_desc: ""
+ CAR.Neutral_green_desc: "社会民主党是一个成立于1991年的社会民主生态政党。该党拥护绿色和社会民主政治等多种观点，是社会主义国际的积极成员。"
  CAR.Nat_Autocracy: "£generic_Nat_Autocracy_small 中非武装力量"
- CAR.Nat_Autocracy_desc: ""
+ CAR.Nat_Autocracy_desc: "中非武装部队是中非共和国的武装部队。它由几个分支组成，其中包括中非地面部队、中非空军、国家宪兵队、共和国卫队和国家警察。"
  CAR.Monarchist: "£generic_Monarchist_small 博卡萨王室"
- CAR.Monarchist_desc: ""
+ CAR.Monarchist_desc: "博卡萨王朝是中非共和国统治王朝的名称，该王朝于1976 年至1979年间短暂统治中非帝国。它由让-贝德尔·博卡萨一世创建，作为合法君主制，很少得到外国承认。"
  CAT.conservatism: "£generic_conservatism_small 加泰罗尼亚人民党"
  CAT.conservatism_desc: ""
  CAT.liberalism: "£generic_liberalism_small 民主和社会中心"
@@ -2536,12 +2536,12 @@
  CBD.Nat_Autocracy_desc: ""
  CBD.Nat_Fascism: "£generic_Nat_Fascism_small 高棉反贫困党"
  CBD.Nat_Fascism_desc: ""
- CDI.liberalism: "£CDI_liberalism_small 共和党集会"
+ CDI.liberalism: "£CDI_liberalism_small 共和人士联盟"
  CDI.liberalism_icon: "£CDI_liberalism_small"
- CDI.liberalism_desc: ""
- CDI.socialism: "£CDI_socialism_small 科特迪瓦工人党（PIT）"
+ CDI.liberalism_desc: "共和人士联盟是科特迪瓦的一个主要自由党。由于与科特迪瓦民主党在1995年总统选举中选择的领导人存在分歧，该委员会于20世纪90年代初作为科特迪瓦民主党的一个分支而成立。自阿拉萨内·瓦塔拉返回科特迪瓦以来，他们已成为他的支持党，拥护严格的自由主义政策和共和主义价值观。"
+ CDI.socialism: "£CDI_socialism_small 科特迪瓦劳工党"
  CDI.socialism_icon: "£CDI_socialism_small"
- CDI.socialism_desc: ""
+ CDI.socialism_desc: "科特迪瓦劳工党是一个中左翼、民主社会主义和社会民主党。由弗朗西斯·沃迪于1990年成立，旨在参加科特迪瓦的选举。"
  CDI.anarchist_communism: "£CDI_anarchist_communism_small 科特迪瓦人民阵线（FPI）"
  CDI.anarchist_communism_icon: "£CDI_anarchist_communism_small"
  CDI.anarchist_communism_desc: ""
@@ -2892,13 +2892,9 @@
  ELS.oligarchism: "£generic_oligarchism_small 野蛮萨尔瓦多人（M-13）"
  ELS.oligarchism_desc: ""
  ERI.anarchist_communism: "£generic_anarchist_communism_small 民主与正义人民阵线"
- ERI.anarchist_communism_desc: ""
- ERI.anarchist_communism2: "£generic_anarchist_communism_small 厄立特里亚人民统一党"
- ERI.anarchist_communism2_desc: "厄立特里亚人民统一党的成立是为了巩固埃塞俄比亚对厄立特里亚的控制，并帮助推动旨在最终确定联邦法案的改革。"
- ERI.neutral_Social: "£generic_neutral_Social_small 厄立特里亚人民民主阵线"
- ERI.neutral_Social_desc: ""
- ERI.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small 厄立特里亚伊斯兰圣战组织"
- ERI.Neutral_Muslim_Brotherhood_desc: ""
+ ERI.anarchist_communism_desc: "（厄立特里亚左翼民族主义者）\n民主与正义人民阵线\n\n民主与正义人民阵线是厄立特里亚人民解放阵线的继承党。在独立战争期间，厄立特里亚人民解放阵线成为这个新兴国家政治机器中的新兴力量，轻松超越了远不那么激进的厄立特里亚解放阵线。1993年以全民投票的形式正式独立后，厄立特里亚人民解放阵线改组为合法政党，并于1994年更名为人民民主与正义阵线。"
+ ERI.neutral_Social: "£generic_neutral_Social_small 厄立特里亚人民民主解放阵线"
+ ERI.neutral_Social_desc: "（中立非洲社会主义者） - 厄立特里亚人民民主解放阵线\n\n该党曾在厄立特里亚独立战争期间与厄立特里亚人民解放阵线结盟。这种关系并没有维持太久，结果厄立特里亚人民民主解放阵线被淘汰了。他们在提格雷人的提格雷人民解放阵线中拥有共同的盟友，他们在部落归属的联邦化问题上分享各自的观点，同时维持由上述部落团体的代表组成的中央政府。"
  EST.conservatism: "£EST_conservatism 祖国"
  EST.conservatism_icon: "£EST_conservatism"
  EST.conservatism_desc: "祖国党是爱沙尼亚的基督教民主和民族保守政党。该党拥护社会保守和经济自由的价值观，同时它还利用爱沙尼亚的民族主义。"
@@ -2924,17 +2920,17 @@
  ETH.liberalism: "£ETH_western_liberal 民主正义统一党"
  ETH.liberalism_desc: ""
  ETH.Communist-State: "£ETH_emerging_communism 埃塞俄比亚工人党"
- ETH.Communist-State_desc: ""
+ ETH.Communist-State_desc: "（马克思列宁主义）\n埃塞俄比亚工人党\n\n曾经是埃塞俄比亚人民民主共和国的唯一合法政党，这一情况于1991年结束。但这并不是该党存在的终结，许多最著名的成员逃离了随后的内乱。"
  ETH.anarchist_communism: "£ETH_left_wing_radical 埃塞俄比亚人民革命民主阵线"
- ETH.anarchist_communism_desc: ""
+ ETH.anarchist_communism_desc: "（多民族民族主义者）\n埃塞俄比亚人民革命民主阵线\n\n他们与其说是一个政党，不如说是一个政治集团，埃塞俄比亚人民革命民主阵线的成员认同民族联邦主义的总体信息，尽管也有少量的社会主义、马克思列宁主义，甚至一些霍查主义情绪。\n\n埃塞俄比亚内战期间，埃塞俄比亚人民革命民主阵线先后与社会主义埃塞俄比亚临时军政府和埃塞俄比亚工人党作战。在埃塞俄比亚人民民主共和国和随后的埃塞俄比亚工人党垮台后，埃塞俄比亚人民革命民主阵线获得了西方盟友的支持，并大幅缓和了他们的理想，接受了所谓的“革命民主”，尽管许多人仍然认为埃塞俄比亚人民革命民主阵线正在掩盖他们对马克思 - 列宁主义的真实信仰。"
  ETH.Neutral_conservatism: "£ETH_non_aligned_autocracy 埃塞俄比亚民主党"
- ETH.Neutral_conservatism_desc: ""
+ ETH.Neutral_conservatism_desc: "（保守自由主义者）\n埃塞俄比亚民主党\n\n至少五个自由党和保守自由党合并的结果。该党起源于1974年的埃塞俄比亚民主联盟，作为君主制抵抗运动的一部分，旨在对抗社会主义埃塞俄比亚临时军政府这一军事独裁政权。"
  ETH.neutral_Social: "£generic_neutral_Social_small 埃塞俄比亚索马里人民民主党"
  ETH.neutral_Social_desc: ""
  ETH.Nat_Autocracy: "£ETH_nationalist_military_junta 埃塞俄比亚国防军"
- ETH.Nat_Autocracy_desc: ""
- ETH.Monarchist: "£ETH_nationalist_monarchist 所罗门王室"
- ETH.Monarchist_desc: ""
+ ETH.Nat_Autocracy_desc: "（军队）\n埃塞俄比亚国防军\n\n目前这支军队自1996年以来一直在服役，尽管军队最早的现代军事交战可以追溯到阿杜瓦战役以及随后于1907年“正式”成立正是这支战斗部队使埃塞俄比亚得以维持在争夺非洲期间获得独立，这是唯一做到的非洲国家。"
+ ETH.Monarchist: "£ETH_nationalist_monarchist 所罗门王朝"
+ ETH.Monarchist_desc: "（君主制）\n所罗门王朝\n\n世界上统治时间最长的王朝之一，也是非洲统治时间最长的王朝，从1270年到1975年被迫废除，总共统治了705年。有人声称这个王朝可以追溯到所罗门王本人的统治时期，因此得名，这种与圣经人物的接近主要是主要以加勒比海为基础的拉斯塔法里运动的原因。"
  FIJ.conservatism: "£FIJ_western_conservative 斐济协会党"
  FIJ.conservatism_desc: "斐济协会党于1994年由原住民土地信托委员会主席、前财政部长何塞法塔·卡米卡米加创立。1992年议会选举后，卡米卡米加和他的五名支持者离开了西蒂维尼拉布卡的斐济政党，并试图与印度-斐济反对派建立联合政府，挑战他的总理职位，但没有成功。该党在1994年大选中赢得了五个席位，由于政治不稳定，大选提前三年举行。1996年卡米卡米加因癌症去世后，拉图·马拉（时任总统拉图· 卡米塞斯·马拉爵士的儿子）接任领导职务。1998 年，他被斐济工党前总理蒂莫西·巴瓦德拉的遗孀阿迪·库伊尼·斯皮德取代。1987年，蒂莫西·巴瓦德拉在时任陆军中校的拉布卡领导的政变中被废黜。1995年，她与已故丈夫所在的政党因新党魁马亨德拉·乔杜里的发展方向发生争执，随后于1995年退出斐济协会党。"
  FIJ.liberalism: "£FIJ_western_liberal 斐济族政治党"
@@ -3845,20 +3841,16 @@
  LUX.Monarchist: "£LUX_nationalist_monarchist 拿骚王室"
  LUX.Monarchist_icon: "£LUX_nationalist_monarchist"
  LUX.Monarchist_desc: ""
- MAL.conservatism: "£generic_conservatism_small 更新和出现的替代力量"
- MAL.conservatism_desc: ""
- MAL.liberalism: "£generic_liberalism_small 民主与发展联盟"
- MAL.liberalism_desc: ""
- MAL.socialism: "£generic_socialism_small 团结、民主和进步党"
- MAL.socialism_desc: ""
+ MAL.conservatism: "£generic_conservatism_small 复兴与崛起替代力量"
+ MAL.conservatism_desc: "（保守主义）- 复兴与崛起替代力量\n复兴与崛起替代力量是一个反对政府的保守党，他们被认为是政府的腐败分子。 复兴与崛起替代力量由苏马那·莫里·库利巴利创立，在其平台上开展反腐败、社会保守主义和其他一些小政策的运动。"
  MAL.Communist-State: "£generic_Communist_State_small 非洲争取民主和独立团结大会"
- MAL.Communist-State_desc: ""
- MAL.neutral_Social: "£generic_neutral_Social_small 马里民主联盟"
- MAL.neutral_Social_desc: ""
+ MAL.Communist-State_desc: "（泛非共产主义） - 非洲民主与独立团结会\n非洲民主与独立团结会是马里的主要共产党之一。它始终按照马克思列宁主义共产主义和泛非主义的议程开展活动。该党名义上声称其主要竞选意识形态是泛非主义，但实际上其本质是共产主义。此外，该党在国际上加入了国际共产主义研讨会，后来加入了国际共产党和工人党会议，使其成为马里最重要的共产主义政党之一并得到认可。"
+ MAL.neutral_Social: "£generic_neutral_Social_small 马里民主联盟 - 非洲团结与正义党"
+ MAL.neutral_Social_desc: "（民主社会主义）- 马里民主联盟-非洲团结与正义党\n马里民主联盟-非洲团结与正义党是一个民主社会主义和泛非主义政党，成立于1990年。由于组建原政党的政党，马里民主联盟-非洲团结与正义党在国内享有广泛的支持。它由马克思列宁主义者、马里移民和政治流亡者组成，更包含一个支持多种社会主义意识形态并鼓励马里政府在非洲积极参与的伞式政党。"
  MAL.Neutral_green: "£generic_Neutral_green_small 马里生态党"
- MAL.Neutral_green_desc: ""
+ MAL.Neutral_green_desc: "（环保主义）- 马里生态党\n马里生态党是马里的绿党，是国际组织全球绿色组织的成员。它拥护绿色政治的许多观点，包括可持续经济增长、气候变化政策和环境保护。"
  MAL.Nat_Autocracy: "£generic_Nat_Autocracy_small 马里武装力量"
- MAL.Nat_Autocracy_desc: ""
+ MAL.Nat_Autocracy_desc: "（军政府）- 马里武装力量\n马里武装部队是马里政府的军队，由马里陆军、马里共和国空军和国民警卫队组成。该军队于1960年法国非殖民化时期组建，最初由马里应征入伍者和法国武装部队的志愿退伍军人组成。马里武装部队随后将继续与图阿雷格人进行一系列冲突，并参加整个西非和中非的维和行动。"
  MAU.Western_Autocracy: "£generic_Western_Autocracy_small 复兴民主共和党"
  MAU.Western_Autocracy_desc: ""
  MAU.anarchist_communism: "£generic_anarchist_communism_small 人民进步联盟"
@@ -4412,8 +4404,6 @@
  SCO.Nat_Fascism_desc: "民族超民族主义 - 盖尔人的后裔"
  SCO.Monarchist: "£generic_Monarchist_small 维特尔斯巴赫王室"
  SCO.Monarchist_desc: ""
- SEL.Neutral_Autocracy: "£generic_Neutral_Autocracy_small 中非共和国反政府武装"
- SEL.Neutral_Autocracy_desc: ""
  SEN.Western_Autocracy: "£generic_Western_Autocracy_small 民主与爱国者大会"
  SEN.Western_Autocracy_desc: ""
  SEN.conservatism: "£generic_conservatism_small 民主革命联盟"
@@ -7616,3 +7606,45 @@
  DEN.Nat_Populism_alt: "£DEN_Nat_Populism_alt 新右派"
  DEN.Nat_Populism_alt_icon: "£DEN_Nat_Populism_alt"
  DEN.Nat_Populism_alt_desc: "丹麦人民党是丹麦主要的民族主义和右翼民粹主义政党。它由前进步党成员于1995年创立。它以反移民为平台开展活动，保护丹麦人民的自由和文化遗产，促进创业和经济增长。他们还寻求保护丹麦的主权，对抗欧盟。该党的经济政策更接近中间和中左翼，使其在丹麦社会中具有独特的地位。坚定的反移民立场使其在丹麦政治光谱中坚定地处于民族主义和右翼民粹主义的地位。"
+ CAR.liberalism_2013: "£generic_liberalism_small 中非复兴联盟"
+ CAR.liberalism_2013_desc: "中非复兴联盟成立于2013年底，是中非共和国组织混乱的自由党的继承者。它在阿尼塞-乔治·多洛盖莱竞选总统期间成立，并慢慢成为中非新自由主义的支柱和代表。"
+ CAR.Conservative: "£generic_Conservative_small 团结一心运动"
+ CAR.Conservative_desc: "团结一心运动是福斯坦·阿尔尚奇·图瓦德拉的政党。该党是与KNK党分道扬镳而成立的，他们在亲非洲和亲俄罗斯的立场上变得更加积极，并反对西方在该国的影响。他们坚持许多社会民主价值观，使自己成为中非共和国的先驱。"
+ CAR.anarchist_communism: "£generic_anarchist_communism_small 中非民主集会"
+ CAR.anarchist_communism_desc: "中非民主集会是一个遵循共和主义和民主社会主义意识形态的非洲民族主义者。该党由安德烈-迪厄多内·科林巴于1987年创立，当时正值他担任总统12年期间的权力巅峰。它在当代常常持有反西方和亲非洲的观点，但在历史上仍然与法国保持着某种密切的联系。"
+ CAR.Neutral_Autocracy: "£generic_Neutral_Autocracy_small 民主团结力量联盟"
+ CAR.Neutral_Autocracy_desc: "民主力量团结联盟是中非共和国的一个叛乱组织，驻扎在中非共和国北部和东北部。该组织由米歇尔·乔托迪亚领导，他后来成为中非政府的重要成员。"
+ ERI.liberalism: "£generic_liberalism_small 厄立特里亚解放阵线"
+ ERI.liberalism_desc: "（厄立特里亚民族主义者）\n厄立特里亚解放阵线\n\n厄立特里亚解放阵线集团是为厄立特里亚从埃塞俄比亚统治下独立而斗争的两个派系之一，另一个当然是厄立特里亚人民解放阵线。尽管厄立特里亚解放阵线主要结构中的大多数人早已退出政坛，无论是否是他们自己自愿退出的，但仍然有厄立特里亚人的政治集团支持厄立特里亚解放阵线继续争取民主和人权的斗争，这些集团主要存在于侨民社区中。"
+ ERI.Communist-State_ETH: "£ETH_emerging_communism 埃塞俄比亚工人党 - 厄立特里亚分部"
+ ERI.Communist-State_ETH_desc: "（马克思列宁主义）\n埃塞俄比亚工人党\n\n曾经是埃塞俄比亚人民民主共和国的唯一合法政党，这一情况于1991年结束。但这并不是该党存在的终结，许多最著名的成员逃离了随后的内乱。\n\n然而，这是该党的厄立特里亚派，只能在厄立特里亚境内获得权力。"
+ ERI.anarchist_communism_ETH: "£ETH_left_wing_radical 厄立特里亚人民革命民主阵线"
+ ERI.anarchist_communism_ETH_desc: "（多民族民族主义者）\n厄立特里亚人民革命民主阵线\n\n作为以埃塞俄比亚为基地的埃塞俄比亚人民革命民主阵线的延伸，该联盟的厄立特里亚派在厄立特里亚境内的运作实践方面比埃塞俄比亚人民革命民主阵线集团内的其他组成党派拥有更多的自主权。"
+ ERI.Caliphate: "£generic_Caliphate_small 厄立特里亚伊斯兰拯救运动"
+ ERI.Caliphate_desc: "（伊斯兰圣战者）\n厄立特里亚伊斯兰拯救运动\n\n一个激进的逊尼派伊斯兰组织，在厄立特里亚腹地活动，并在邻国苏丹境内设有分支机构。他们寻求在厄立特里亚境内通过伊斯兰教法，并涉嫌得到苏丹政府的资助和支持。"
+ ERI.Neutral_conservatism_ETH: "£ETH_non_aligned_autocracy 埃塞俄比亚民主党 - 厄立特里亚分部"
+ ERI.Neutral_conservatism_ETH_desc: "（保守自由主义者）\n埃塞俄比亚民主党\n\n至少五个自由党和保守自由党合并的结果。该党起源于1974年的埃塞俄比亚民主联盟，作为君主制抵抗运动的一部分，旨在对抗社会主义埃塞俄比亚临时军政府这一军事独裁政权。\n\n这是该党的厄立特里亚派，因此只能在厄立特里亚选举中进行。"
+ ERI.neutral_Social_2004: "£generic_neutral_Social_small 厄立特里亚人民民主阵线"
+ ERI.neutral_Social_2004_desc: "（中立非洲社会主义者）\n厄立特里亚人民民主阵线\n\n厄立特里亚人民民主阵线于2004年正式成立，合并了厄立特里亚人民民主解放阵线和厄立特里亚革命民主阵线的一个小型分离组织，该政治集团继续维持厄立特里亚人民民主解放阵线对在很大程度上集权的政府内部落附属联邦制的看法。"
+ ERI.Nat_Autocracy: "£generic_Nat_Autocracy_small 厄立特里亚国防军"
+ ERI.Nat_Autocracy_desc: "（军队）\n厄立特里亚国防军\n\n1991年独立后，厄立特里亚国家通过合并厄立特里亚解放阵线和厄立特里亚人民解放阵线的准军事组织组建了厄立特里亚国防军。进入 21 世纪后，这支新国防军的最大组成部分以陆军为主，也称为厄立特里亚陆军。"
+ ERI.Monarchist_ETH: "£ETH_nationalist_monarchist 所罗门王朝 - 阿克苏姆王室"
+ ERI.Monarchist_ETH_desc: "（君主制）\n所罗门王朝\n\n世界上统治时间最长的王朝之一，也是非洲统治时间最长的王朝，从1270年到1975年被迫废除，总共统治了705年。有人声称这个王朝可以追溯到所罗门王本人的统治时期，因此得名，这种与圣经人物的接近主要是主要以加勒比海为基础的拉斯塔法里运动的原因。\n\n然而，这是一个相对较新的王朝分支，其名称为§3阿克苏姆王室§!，他们得到厄立特里亚地区仍然宣誓效忠的人的支持到了旧王朝，无论他们的数量有多么少。"
+ LOG.Nat_Autocracy: "£generic_Nat_Autocracy_small 中非共和国复兴人民阵线"
+ LOG.Nat_Autocracy_desc: "（军事叛乱组织）- 中非共和国复兴人民阵线\n中非复兴人民阵线是作为一个叛乱组织而成立的，是几个前塞雷卡叛乱派别之一。在努尔丁·亚当的领导下，该组织在中非共和国东北部建立了自己的平行国家，称为洛贡共和国（亦称达尔库提）。"
+ MAL.liberalism_2003: "£generic_liberalism_small 共和民主联盟"
+ MAL.liberalism_2003_desc: "（社会自由主义）- 共和民主联盟\n共和民主联盟是马里的一个社会自由主义政党。该党由苏马伊拉·西塞的支持者创立，其成立是为了反对当时的总统阿尔法·奥马尔·科纳雷，后者支持阿马杜·图埃反对自己的政党。此外，该党在地区上隶属于非洲自由网络，随后又隶属于更广泛的国际公认的中间派民主国际。"
+ MAL.socialism_2001: "£generic_socialism_small 马里集会"
+ MAL.socialism_2001_desc: "(社会主义) - 马里集会\n马里集会成立于2001年，是易卜拉欣·布巴卡尔·凯塔的政党。他和该党支持民主，维护国家稳定，并与图阿雷格人进行谈判，拉近他们与政府的距离。该党还致力于通过消除教育障碍、改善社会保障结构、为脆弱地区提供水和灌溉，以及更广泛的政策改革，为马里所有人民带来繁荣，从而让马里走向未来。"
+ MAL.anarchist_communism: "£generic_anarchist_communism_small 苏丹联盟 - 非洲民主联盟"
+ MAL.anarchist_communism_desc: "（泛非社会主义者） - 苏丹联盟 - 非洲民主集会\n苏丹联盟 - 非洲民主集会是马里的一个左翼非洲社会主义者和泛非主义政党，与非洲民主党关系密切。在脱离马里民主联盟之前，该党是马里民主联盟的活跃成员。"
+ MAL.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small 民主与发展联盟"
+ MAL.Neutral_Muslim_Brotherhood_desc: "（伊斯兰民主主义） - 民主与发展联盟\n民主与发展联盟由哈桑·巴里于1992年创立，旨在反对当时的总统阿尔法·奥马尔·科纳雷。该党以一系列保守的伊斯兰民主价值观为竞选纲领，党内部分派别更倾向于右翼。该党的主要宗旨之一是将更多的伊斯兰民主带入马里，开启一个影响力的新时代。"
+ MAL.Neutral_Communism: "£generic_Neutral_Communism_small 马里劳动党"
+ MAL.Neutral_Communism_desc: "（霍查主义-共产主义）- 马里劳动党\n该党最初成立于1958年，是一个马克思列宁主义政党，后来成为马里民主联盟的成员，之后成为一个分裂派别。马里劳动党今天仍然是马里民主联盟内的一个霍查主义-共产主义分裂派别。作为一个反修正主义的共产党，它更接近马克思列宁主义的真正教义，并对美国、俄罗斯、欧盟和中国持极端批评态度。"
+ MAL.Neutral_conservatism: "£generic_Neutral_conservatism_small 杜尔政府"
+ MAL.Neutral_conservatism_desc: "（大帐篷保守主义）- 杜尔政府\n阿马杜·图马尼·杜尔是马里政治家，1991年至1992年担任过渡政府主席，监督了该国首次多党选举。此外，他还是前总统穆萨·特拉奥雷的私人卫队队长，协助领导革命，并主持了军民过渡进程，起草了马里宪法。他以将军军衔退役，他选择以独立候选人身份参选，吸引了来自各个政治派别的选民。该党代表了他在每次选举中对他政纲的支持。"
+ SEL.Neutral_Autocracy_1: "£generic_Neutral_Autocracy_small 塞雷卡"
+ SEL.Neutral_Autocracy_1_desc: "塞雷卡是中非共和国反叛民兵组织的联盟。该组织主要从该国的穆斯林人口中汲取力量，由正义与和平爱国者公约和拯救国家爱国者公约的“基本”分裂组织组成。然后，它又吸收了许多其他反叛组织，其中最引人注目的是由米歇尔·乔托迪亚领导的民主力量团结联盟，他将成为该组织在中非共和国内战中的领导人。"
+ SEL.Neutral_Autocracy_2: "£generic_Neutral_Autocracy_small 前塞雷卡"
+ SEL.Neutral_Autocracy_2_desc: "前塞雷卡是塞雷卡的后继联盟。它包括几个公开反对“反巴拉卡”组织、一系列基督教民兵组织以及不同意总统米歇尔·乔托迪亚解散塞雷卡的政府的分裂团体。"
