--- a/localisation/simp_chinese/state_names_l_simp_chinese.yml
+++ b/localisation/simp_chinese/state_names_l_simp_chinese.yml
@@ -44,7 +44,7 @@
  STATE_43: "巴伐利亚"
  STATE_44: "萨克森"
  STATE_45: "柏林"
- STATE_46: "荷兰"
+ STATE_46: "西荷兰"
  STATE_47: "南荷兰"
  STATE_48: "东荷兰"
  STATE_49: "库拉索"
@@ -1167,3 +1167,4 @@
  STATE_1166: "卡伊"
  STATE_1167: "昂松戈"
  STATE_1168: "南千岛群岛"
+ STATE_1169: "北荷兰"
