--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3059,7 +3059,7 @@
  CRM.Nat_Populism: "£SOV_nationalist_right_wing_populist LDPR"
  CRM.Nat_Populism_icon: "£SOV_nationalist_right_wing_populist"
 
-### Ural ###
+ ### Ural ###
  #Western
  URA.conservatism: "£URA_western_conserv Natsional-Demokraticheskiy Alyans"
  URA.conservatism_icon: "£URA_western_conserv"
@@ -3094,6 +3094,137 @@
  URA.Nat_Populism_icon: "£URA_nat_pop"
  URA.Nat_Autocracy: "£URA_nat_autocracy Self-Defence Forces of Ural"
  URA.Nat_Autocracy_icon: "£URA_nat_autocracy"
+ ### Siberia ###
+ #Western
+ SIB.conservatism: "£SIB_western_conservative Grazhdanskaya Initsyativa"
+ SIB.conservatism_icon: "£SIB_western_conservative"
+ SIB.liberalism: "£SIB_western_liberal Demokraticheskiy Front"
+ SIB.liberalism_icon: "£SIB_western_liberall"
+ SIB.socialism: "£SIB_western_socialism RPSD"
+ SIB.socialism_icon: "£SIB_western_socialism"
+ #Emerging
+ SIB.Communist-State: "£SIB_communism-statism Obyedinennaya Kommunisticheskaya Partiya"
+ SIB.Communist-State_icon: "£SIB_communism-statism"
+ SIB.anarchist_communism: "£SIB_anarchist_communism Partiya Truda"
+ SIB.anarchist_communism_icon: "£SIB_anarchist_communism"
+ SIB.anarchist_communism_desc: ""
+ SIB.Conservative: "£SIB_emerging_conservatie Partiya Samoupravleniya"
+ SIB.Conservative_icon: "£SIB_emerging_conservatie"
+ #Non-Aligned
+ SIB.Neutral_Communism: "£SIB_neutral_communism Sotsialisticheskoye Dvizheniye"
+ SIB.Neutral_Communism_icon: "£SIB_neutral_communism"
+ SIB.Neutral_Libertarian: "£SIB_neutral_libertarian Partiya Economicheskogo Razvitiya"
+ SIB.Neutral_Libertarian_icon: "£SIB_neutral_libertarian"
+ SIB.neutral_Social: "£SIB_neutral_socialism Oblastniki"
+ SIB.neutral_Social_icon: "£SIB_neutral_socialism"
+ SIB.Neutral_conservatism: "£SIB_neutral_conservative Narodnyy Sobor"
+ SIB.Neutral_conservatism_icon: "£SIB_neutral_conservative"
+ #Nationalist
+ SIB.Nat_Fascism: "£SIB_nat_pop Revolutsioonnoye Dvizheniye"
+ SIB.Nat_Fascism_icon: "£SIB_nat_pop"
+ SIB.Monarchist: "£SIB_nat_monarchism Sibirskoye Zemstvo"
+ SIB.Monarchist_icon: "£SIB_nat_monarchism"
+ SIB.Nat_Populism: "£SIB_nat_populism Natsional-Demokraticheskaya Partiya"
+ SIB.Nat_Populism_icon: "£SIB_nat_populism"
+ SIB.Nat_Autocracy: "£SIB_nat_autocracy Sibirskiy Batalyon"
+ SIB.Nat_Autocracy_icon: "£SIB_nat_autocracy"
+ #Western
+ SYB.conservatism: "£SIB_western_conservative Grazhdanskaya Initsyativa"
+ SYB.conservatism_icon: "£SIB_western_conservative"
+ SYB.liberalism: "£SIB_western_liberal Demokraticheskiy Front"
+ SYB.liberalism_icon: "£SIB_western_liberall"
+ SYB.socialism: "£SIB_western_socialism RPSD"
+ SYB.socialism_icon: "£SIB_western_socialism"
+ #Emerging
+ SYB.Communist-State: "£SIB_communism-statism Obyedinennaya Kommunisticheskaya Partiya"
+ SYB.Communist-State_icon: "£SIB_communism-statism"
+ SYB.anarchist_communism: "£SIB_anarchist_communism Partiya Truda"
+ SYB.anarchist_communism_icon: "£SIB_anarchist_communism"
+ SYB.anarchist_communism_desc: ""
+ SYB.Conservative: "£SIB_emerging_conservatie Partiya Samoupravleniya"
+ SYB.Conservative_icon: "£SIB_emerging_conservatie"
+ #Non-Aligned
+ SYB.Neutral_Communism: "£SIB_neutral_communism Sotsialisticheskoye Dvizheniye"
+ SYB.Neutral_Communism_icon: "£SIB_neutral_communism"
+ SYB.Neutral_Libertarian: "£SIB_neutral_libertarian Partiya Economicheskogo Razvitiya"
+ SYB.Neutral_Libertarian_icon: "£SIB_neutral_libertarian"
+ SYB.neutral_Social: "£SIB_neutral_socialism Oblastniki"
+ SYB.neutral_Social_icon: "£SIB_neutral_socialism"
+ SYB.Neutral_conservatism: "£SIB_neutral_conservative Narodnyy Sobor"
+ SYB.Neutral_conservatism_icon: "£SIB_neutral_conservative"
+ #Nationalist
+ SYB.Nat_Fascism: "£SIB_nat_pop Revolutsioonnoye Dvizheniye"
+ SYB.Nat_Fascism_icon: "£SIB_nat_pop"
+ SYB.Monarchist: "£SIB_nat_monarchism Sibirskoye Zemstvo"
+ SYB.Monarchist_icon: "£SIB_nat_monarchism"
+ SYB.Nat_Populism: "£SIB_nat_populism Natsional-Demokraticheskaya Partiya"
+ SYB.Nat_Populism_icon: "£SIB_nat_populism"
+ SYB.Nat_Autocracy: "£SIB_nat_autocracy Sibirskiy Batalyon"
+ SYB.Nat_Autocracy_icon: "£SIB_nat_autocracy"
+  ### Ural ###
+ #Western
+ FAR.conservatism: "£FAR_western_conservative Demokraticheskiy Vybor Respubliki"
+ FAR.conservatism_icon: "£FAR_western_conservative"
+ FAR.liberalism: "£FAR_western_liberalism Partiya Yedinstva"
+ FAR.liberalism_icon: "£FAR_western_liberalism"
+ FAR.socialism: "£FAR_western_socialism Narodno-Democraticheskiy Soyuz"
+ FAR.socialism_icon: "£FAR_western_socialism"
+ #Emerging
+ FAR.Communist-State: "£FAR_communist-state Kommunisticheskaya Partiya of DVR"
+ FAR.Communist-State_icon: "£FAR_communist-state"
+ FAR.anarchist_communism: "£FAR_anarchist_communism Sotsialisticheskaya Al'ternativa"
+ FAR.anarchist_communism_icon: "£FAR_anarchist_communism"
+ #Non-Aligned
+ FAR.oligarchism: "£FAR_oligarchism Partiya Narodovlastiya"
+ FAR.oligarchism_icon: "£FAR_oligarchism"
+ FAR.Neutral_Communism: "£FAR_neutral_communism Maoistskaya Partiya"
+ FAR.Neutral_Communism_icon: "£FAR_neutral_communism"
+ FAR.Neutral_Libertarian: "£URA_neutral_libertarian Democraticheskaya Party"
+ FAR.Neutral_Libertarian_icon: "£URA_neutral_libertarian"
+ FAR.neutral_Social: "£FAR_neutral_socialism SDPDVR"
+ FAR.neutral_Social_icon: "£FAR_neutral_socialism"
+ FAR.Neutral_conservatism: "£FAR_neutral_conservative Narodno-Patrioticheskiy Blok"
+ FAR.Neutral_conservatism_icon: "£FAR_neutral_conservative"
+ #Nationalist
+ FAR.Nat_Fascism: "£FAR_nat_fascism Primorskoye Soprotivleniye"
+ FAR.Nat_Fascism_icon: "£FAR_nat_fascism"
+ FAR.Nat_Populism: "£SOV_nationalist_right_wing_populist LDPDVR"
+ FAR.Nat_Populism_icon: "£SOV_nationalist_right_wing_populist"
+ FAR.Nat_Autocracy: "£FAR_nat_autocracy Republican Forces of the FER"
+ FAR.Nat_Autocracy_icon: "£FAR_nat_autocracy"
+ ### Don ###
+ #Western
+ DON.conservatism: "£DON_western_conservative Konstitutsionnye Demokraty"
+ DON.conservatism_icon: "£DON_western_conservative"
+ DON.liberalism: "£DON_western_liberal Soyuz Svobody"
+ DON.liberalism_icon: "£DON_western_liberal"
+ DON.socialism: "£DON_western_socialism Sotsial-Democraticheskaya Partiya"
+ DON.socialism_icon: "£DON_western_socialism"
+ #Emerging
+ DON.Communist-State: "£DON_communist-state Partiya Russkikh Communistov"
+ DON.Communist-State_icon: "£DON_communist-state"
+ DON.anarchist_communism: "£DON_anarchist_communism Krestyanskiy Trudovoy Soyuz"
+ DON.anarchist_communism_icon: "£DON_anarchist_communism"
+ DON.Conservative: "£DON_emerging_conservative Yedinstvo Donskoye"
+ DON.Conservative_icon: "£DON_emerging_conservative"
+ #Non-Aligned
+ DON.oligarchism: "£DON_oligarchism Narodnaya Partiya"
+ DON.oligarchism_icon: "£DON_oligarchism"
+ DON.Neutral_Communism: "£DON_neutral_communism Partiya Radikalnykh Sotsialistov"
+ DON.Neutral_Communism_icon: "£DON_neutral_communism"
+ DON.neutral_Social: "£DON_neutral_socialism RSDRP"
+ DON.neutral_Social_icon: "£DON_neutral_socialism"
+ DON.Neutral_conservatism: "£DON_neutral_conservative Front Natsionalnogo Spaseniya"
+ DON.Neutral_conservatism_icon: "£DON_neutral_conservative"
+ #Nationalist
+ DON.Nat_Fascism: "£DON_nat_fascism Russkoye Natsionalnoye Edinstvo"
+ DON.Nat_Fascism_icon: "£DON_nat_fascism"
+ DON.Nat_Populism: "£DON_nat_populism Natsional-Respublikantsy"
+ DON.Nat_Populism_icon: "£DON_nat_populism"
+ DON.Nat_Autocracy: "£DON_nat_autocracy Kazachiy Krug "
+ DON.Nat_Autocracy_icon: "£DON_nat_autocracy"
+ DON.Monarchist: "£SIB_nat_monarchism Zemskiy Sobor"
+ DON.Monarchist_icon: "£SIB_nat_monarchism"
  ### Taiwan ###
  ###pro-western
  TAI.conservatism: "£TAI_conservatism Kuomintang (KMT)" #Should be in neutral (perhaps conservative but don't know where to move PFP,)
