legco and some loc

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -35,12 +35,12 @@
  HKG_crack_down_on_Luen_group_triad_desc: ""
 
  #politics
- HKG_divided_hong_kong: "A Divided Hong Kong"
+ HKG_divided_hong_kong: "A Devided Hong Kong"
  HKG_divided_hong_kong_desc: "The final years of Hong Kong's British rule left a legacy of pluralistic democracy. But it also led to endless disputes between the pro-establishment, pro-democracy and localist, and instead reduced administrative efficiency as a result. This makes people wonder whether this chaotic \"democracy\" is really as good as it is made out to be?"
  HKG_support_pro_beijing_camp: "Support the Pro-Beijing Camp"
  HKG_support_pro_beijing_camp_desc: "\"Freedom is not unimportant. But in our social culture, freedom is not as important as stability. \" Now it's time for the world to witness a more stable and secure Hong Kong."
  HKG_railway_development_strategy_2000: "Railway Development Strategy 2000"
- HKG_railway_development_strategy_2000_desc: ""
+ HKG_railway_development_strategy_2000_desc: "In order to cope with the future congestion of urban roads due to the growing population and the capacity constraints arising from the increasing economic and trade exchanges between the Mainland and Hong Kong, we will put forward the Railway Development Strategy 2000 to guide the MTR's development plan for the next ten years."
  HKG_sign_CEPA: "Sign the CEPA"
  HKG_sign_CEPA_desc: ""
  HKG_approve_funding_for_XRL: "Approve Funding for the XRL"
@@ -48,7 +48,7 @@
  HKG_co_location_bill: "The Co-Location Bill"
  HKG_co_location_bill_desc: ""
  HKG_electoral_reform: "Electoral Reform"
- HKG_electoral_reform_desc: ""
+ HKG_electoral_reform_desc: "The Basic Law set out the selecting method of the Chief Executive of Hong Kong for the first two terms and the LegCo for the first three terms. It does not, however, stipulate how elections should be conducted after that. Perhaps we can take this opportunity to push for a reform of our electoral system to achieve genuine universal suffrage."
  HKG_a_broader_electorate: "A Broader Electorate?"
  HKG_a_broader_electorate_desc: ""
  HKG_choose_your_own_puppet: "\"Choose Your Own Puppet\""
@@ -322,8 +322,11 @@
  legco_none_motion_tt: "None"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
  legco_electoral_reform_tt: "Electoral Reform"
- legco_railway_development_strategy_2000_focus_tt: "The Motion §YRailway Development Strategy 2000§! will be voted in the §YLegCo§!.\n\nThe §CPro-establishment Camp§! and §8Pan-democracy Camp§! would approval this motion."
- legco_electoral_reform_focus_tt: "The Motion §YElectoral Reform§! will be voted in the §YLegCo§!.\n\nThe §CPro-establishment Camp§! and §8Pan-democracy Camp§! would approval this motion."
+ legco_funding_XRL_tt: "Funding of §3XRL HK section§!"
+ legco_railway_development_strategy_2000_focus_tt: "The Motion §YRailway Development Strategy 2000§! will be voted in the §YLegCo§!."
+ legco_approve_funding_for_XRL_focus_tt: "The §YFunding of§! §3XRL HK section§! will be voted in the §YLegCo§!."
+ legco_electoral_reform_focus_tt: "The Motion §YElectoral Reform§! will be voted in the §YLegCo§! after Mainland's Goverment §Raccept it§!."
+ legco_motion_vote_supports_tt: "§CPro-establishment Camp§! Supports: [?legco_PE_temp_support|2%](§C[?legco_PE_support|0]/[?legco_PE_seats]§!)\n§8Pan-democracy Camp§! Supports: [?legco_PD_temp_support|2%](§8[?legco_PD_support|0]/[?legco_PD_seats]§!)\n§GLocalist Camp§! Support: [?legco_LC_temp_support|2%](§G[?legco_LC_support|0]/[?legco_LC_seats]§!)"
  #DYNAMIC MODIFIERS
  #Housing Issue
  UHM_dynamic_modifies_TT: "\nModify §Y$HKG_unrestricted_housing_market$§! by"
