--- a/localisation/simp_chinese/MD_focus_HKG_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_HKG_l_simp_chinese.yml
@@ -43,7 +43,7 @@
  HKG_co_location_bill: "一地两检法案"
  HKG_co_location_bill_desc: ""
  HKG_electoral_reform: "选举制度改革"
- HKG_electoral_reform_desc: ""
+ HKG_electoral_reform_desc: "《基本法》规定了香港首两届行政长官和首三届立法会的产生办法。然而，《基本法》并未规定在此后该如何进行选举。或许我们可借此机会推动选举制度改革，以达成真正的普选。"
  HKG_a_broader_electorate: "更广泛的选民？"
  HKG_a_broader_electorate_desc: ""
  HKG_choose_your_own_puppet: "\"选择你自己的傀儡\""
@@ -297,8 +297,11 @@
  legco_none_motion_tt: "无"
  legco_railway_development_strategy_2000_tt: "《铁路发展策略2000》"
  legco_electoral_reform_tt: "选举制度改革"
- legco_railway_development_strategy_2000_focus_tt: "§Y《铁路发展策略2000》§!议题将在§Y立法会§!表决。\n\n§C亲建制派§!与§8泛民主派§!将赞同这一议题。"
- legco_electoral_reform_focus_tt: "§Y选举制度改革§!议题将在§Y立法会§!表决。\n\n§C亲建制派§!与§8泛民主派§!将赞同这一议题。"
+ legco_funding_XRL_tt: "§3广深港高速铁路香港段§!预算"
+ legco_railway_development_strategy_2000_focus_tt: "§Y《铁路发展策略2000》§!议题将在§Y立法会§!表决。"
+ legco_electoral_reform_focus_tt: "§Y选举制度改革§!议题将在中央政府§R同意后§!在§Y立法会§!表决。"
+ legco_approve_funding_for_XRL_focus_tt: "§Y§3广深港高速铁路香港段§!预算§!将在§Y立法会§!表决。"
+ legco_motion_vote_supports_tt: "§C亲建制派§!支持率: [?legco_PE_temp_support|2%](§C[?legco_PE_support|0]/[?legco_PE_seats]§!)\n§8泛民主派§!支持率: [?legco_PD_temp_support|2%](§8[?legco_PD_support|0]/[?legco_PD_seats]§!)\n§G本土派§!支持率: [?legco_LC_temp_support|2%](§G[?legco_LC_support|0]/[?legco_LC_seats]§!)"
  UHM_dynamic_modifies_TT: "\n由§Y$HKG_unrestricted_housing_market$§!修正"
  UHM_update_pp_cost_TT: "政治点数花费：[?UHM_political_power_cost_var|+]"
  UHM_update_stability_factor_TT: "稳定度：[?UHM_stability_factor_var|+%]"
@@ -323,8 +326,8 @@
  HKG_triad_strength: "三合会的实力"
  HKG_modify_triad_evidance_tt: "§Y三合会犯罪证据§!改变[?HKG_modify_triad_evidance|+0]（当前：[?HKG.HKG_triad_evidance|Y0]）\n"
  HKG_modify_triad_strength_tt: "§Y三合会的实力§!改变[?HKG_modify_triad_strength|+0]（当前：[?HKG.HKG_triad_strength|Y0]）\n"
- hongkong.8.t: "龙之年"
- hongkong.8.d: "回归大陆已过三年，香港经历了亚洲金融危机。但在中国的统治下，香港并没有像西方想象的那样走向衰落。进入新千年，香港仍将向世界证明，融入中国并不是一件坏事……"
+ hongkong.8.t: "龙年"
+ hongkong.8.d: "自从香港回归大陆已过三年，香港经历了亚洲金融危机。但在中国的统治下，香港并没有像西方想象的那样走向衰落。进入新千年，香港仍将向世界证明，融入中国并不是一件坏事……"
  hongkong.8.a: "新年快乐！"
  hongkong.9.t: "香港特区想从大陆采购一些武器"
  hongkong.9.d: "香港警方今天要求中国北方工业公司采购一些步兵武器和其他装备。我们应该把武器卖给他们吗？"
