--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -3982,27 +3982,27 @@
  MON.Nat_Autocracy: "£MON_nationalist_military_junta 蒙古武装力量"
  MON.Nat_Autocracy_icon: "£MON_nationalist_military_junta"
  MON.Nat_Autocracy_desc: "蒙古武装部队是蒙古军队及其组成的联合部队的统称。它的任务是保护蒙古的独立、主权和领土完整。"
- MOR.conservatism: "£generic_conservatism_small 正义与发展党"
- MOR.conservatism_desc: ""
- MOR.liberalism: "£generic_liberalism_small 国民独立大会"
- MOR.liberalism_desc: ""
+ MOR.conservatism: "£generic_conservatism_small 独立国民联合"
+ MOR.conservatism_desc: "（古典自由主义） - 独立国民联合\n\n该党名义上是一个社会民主党，但经常与其他自由主义倾向的政党合作，被广泛描述为亲商和自由派。该党由当时的总理艾哈迈德·奥斯曼于1978年创立，一直是摩洛哥政治中的重要参与者。此外，该党是自由国际的国内观察员，隶属于非洲自由网络和欧洲人民党。"
+ MOR.liberalism: "£generic_liberalism_small 进步与社会主义党"
+ MOR.liberalism_desc: "（左翼社会主义）- 进步与社会主义党\n\n进步与社会主义党于1974年由解放与社会主义党成立。该党的纲领是左翼社会主义，并继续遵循其继承者共产党的宗旨。"
  MOR.socialism: "£generic_socialism_small 人民阵线社会主义联盟"
- MOR.socialism_desc: ""
- MOR.Western_Autocracy: "£generic_Western_Autocracy_small 阿拉维王朝 - 西方派系"
- MOR.Western_Autocracy_desc: ""
- MOR.anarchist_communism: "£generic_anarchist_communism_small 社会主义进步党"
- MOR.anarchist_communism_desc: ""
+ MOR.socialism_desc: "（民主社会主义） - 人民阵线社会主义联盟\n\n人民阵线社会主义联盟是从独立党分裂出来的人民力量全国联盟中分裂出来的。该党成立于1975年，在意识形态上是一个社会民主主义政党，致力于在摩洛哥推行社会主义和民主政策。此外，该党是欧洲社会党的观察员成员，也是社会主义国际进步联盟的国际成员，标志着该党成为摩洛哥政坛领先的社会主义政党之一。"
+ MOR.Western_Autocracy: "£generic_Western_Autocracy_small 民主与社会运动"
+ MOR.Western_Autocracy_desc: "（保皇主义）- 民主与社会运动\n民主与社会运动党由前警察局长马哈茂德·阿尔山于1996年创立。民主与社会运动党经常被许多人描述为保皇党空壳党，因为该党强烈支持君主制并支持阿拉维王朝的继续统治。"
+ MOR.anarchist_communism: "£generic_anarchist_communism_small 统一社会党"
+ MOR.anarchist_communism_desc: "左翼民族主义者）- 统一社会党\n\n统一社会党由穆罕默德·本赛义德·艾特·伊德创立，在2005年之前主要以统一社会主义左翼党的名称存在。该党以民主社会主义、反帝国主义、左翼民粹主义和左翼民族主义为竞选纲领。该党的许多高层领导也反对君主制，并寻求在摩洛哥灌输更多的民主价值观。"
  MOR.Caliphate: "£generic_Caliphate_small 摩洛哥穆斯林斗争集团"
  MOR.Neutral_conservatism: "£generic_Neutral_conservatism_small 独立党"
- MOR.Neutral_conservatism_desc: ""
- MOR.oligarchism: "£generic_oligarchism_small 真实与现代党(2017)"
- MOR.oligarchism_desc: ""
- MOR.Neutral_Libertarian: "£generic_Neutral_Libertarian_small 人民运动"
- MOR.Neutral_Libertarian_desc: ""
- MOR.Nat_Autocracy: "£generic_Nat_Autocracy_small 摩洛哥皇家卫队"
- MOR.Nat_Autocracy_desc: ""
- MOR.Monarchist: "£generic_Monarchist_small 阿拉维王朝 - 传统派"
- MOR.Monarchist_desc: ""
+ MOR.Neutral_conservatism_desc: "（阿拉伯民族主义者/保守主义）- 独立党\n\n独立党成立于 1937 年，当时摩洛哥处于保护国时期，是一个支持脱离西班牙和法国的独立的政党。现代摩洛哥王国成立后，该党成为阿拉伯民族主义和保守主义的领头党。此外，该党隶属于非洲民主联盟，在国际上隶属于国际民主联盟中间派民主国际。"
+ MOR.oligarchism: "£generic_oligarchism_small 真实与现代党"
+ MOR.oligarchism_desc: "（改革派君主自由主义） -  真实与现代党\n\n该党由穆罕默德六世·福阿德·阿里·艾尔·希马的朋友于2008年组建，由多个政党合并而成。该政党及其支持的政策通常被描述为社会自由党，但该党并非没有争议。反对该党的人指责它受到君主制的支持和指导，当然，该党对此予以驳斥。"
+ MOR.Neutral_Libertarian: "£generic_Neutral_Libertarian_small 立宪联盟"
+ MOR.Neutral_Libertarian_desc: "（自由君主制）- 立宪联盟\n\n该党由马蒂·布阿比德于1983年创立，是一个民粹主义政党，信奉自由经济政策，同时也是摩洛哥君主制的狂热支持者。"
+ MOR.Nat_Autocracy: "£generic_Nat_Autocracy_small 摩洛哥皇家武装部队"
+ MOR.Nat_Autocracy_desc: "（军政府） - 摩洛哥皇家武装部队\n\n摩洛哥皇家武装部队最初成立于1098年，但军队的现代形式成立于1958年。它由摩洛哥皇家陆军、摩洛哥皇家海军、摩洛哥皇家空军、摩洛哥皇家卫队和摩洛哥皇家宪兵组成。摩洛哥皇家武装部队的最高指挥官当然是摩洛哥国王，国防部长密切参与摩洛哥皇家武装部队的行动。"
+ MOR.Monarchist: "£generic_Monarchist_small 阿拉维王室"
+ MOR.Monarchist_desc: "（绝对君主制）- 阿拉维王室\n\n阿拉维王朝是一个阿拉伯谢里夫王朝，自称是伊斯兰教先知穆罕默德的孙子哈桑·伊本·阿里的后裔。穆罕默德六世自1999年7月起担任阿拉维王朝的现任首领。自17世纪初以来，该王朝作为苏丹和后保护国国王统治摩洛哥，相对而言没有中断过。"
  MOZ.conservatism: "£generic_conservatism_small 莫桑比克民族抵抗运动"
  MOZ.conservatism_desc: ""
  MOZ.liberalism: "£generic_liberalism_small 和平民主发展党"
@@ -7648,3 +7648,32 @@
  SEL.Neutral_Autocracy_1_desc: "塞雷卡是中非共和国反叛民兵组织的联盟。该组织主要从该国的穆斯林人口中汲取力量，由正义与和平爱国者公约和拯救国家爱国者公约的“基本”分裂组织组成。然后，它又吸收了许多其他反叛组织，其中最引人注目的是由米歇尔·乔托迪亚领导的民主力量团结联盟，他将成为该组织在中非共和国内战中的领导人。"
  SEL.Neutral_Autocracy_2: "£generic_Neutral_Autocracy_small 前塞雷卡"
  SEL.Neutral_Autocracy_2_desc: "前塞雷卡是塞雷卡的后继联盟。它包括几个公开反对“反巴拉卡”组织、一系列基督教民兵组织以及不同意总统米歇尔·乔托迪亚解散塞雷卡的政府的分裂团体。"
+ MOR.Communist-State: "£generic_Communist_State_small 社会主义民主先锋党"
+ MOR.Communist-State_desc: "（阿拉伯社会主义）- 社会主义民主先锋党\n\n社会主义民主先锋党由阿里·布图阿拉于1991年创立。该党的意识形态是阿拉伯社会主义、世俗主义和工会主义，并融合了阿拉伯民族主义和泛阿拉伯主义。该党也经常严厉批评美国，并以各种形式反对帝国主义。此外，该党也是巴勒斯坦的坚定支持者，其对以色列的政策是反犹太复国主义的。"
+ MOR.Conservative: "£generic_Conservative_small 摩洛哥工人总工会"
+ MOR.Conservative_desc: "（保守工党） - 摩洛哥工人总工会\n\n摩洛哥工人总工会的根源在于摩洛哥的农业工人。尽管起源于此，但许多私营和公共部门的员工也是摩洛哥工人总工会的成员。摩洛哥工人总工会通常被视为不那么激进和保守。它隶属于国际工会联合会，与PI关系密切。"
+ MOR.Autocracy: "£generic_Autocracy_small 摩洛哥企业总联合会"
+ MOR.Autocracy_desc: "（雇主利益） - 摩洛哥企业总联合会\n\n摩洛哥企业总联合会是摩洛哥雇主联合会，成立于1947年。它最初是由一群富有的工业家组建的，旨在确保该国工业家的利益。目前，摩洛哥企业总联合会代表着超过九万名企业家，其中近95%是中小型企业主。摩洛哥企业总联合会投票制度不是基于“一公司一票”原则，而是基于营业额，赋予大公司越来越大的影响力。"
+ MOR.Vilayat_e_Faqih: "£generic_Vilayat_e_Faqih_small 丹吉尔什叶派管理局"
+ MOR.Vilayat_e_Faqih_desc: "（强硬派什叶派革命者） - 丹吉尔什叶派管理局\n\n丹吉尔什叶派管理局被认为是摩洛哥所有什叶派政党中最激进的政党。该党遵循有争议的人物谢赫·亚西尔·哈比卜的教义，热切希望将什叶派带入摩洛哥人民。丹吉尔什叶派管理局与其他什叶派政党之间一直存在争斗，因为它对摩洛哥什叶派采取了更为激进的态度。"
+ MOR.Mod_Vilayat_e_Faqih: "£generic_Mod_Vilayat_e_Faqih_small 雷萨利路线"
+ MOR.Mod_Vilayat_e_Faqih_desc: "（温和的什叶派革命者）- 雷萨利路线\n\n雷萨利路线被广泛认为是摩洛哥什叶派运动中最突出的一个。该组织最初被摩洛哥当局禁止，但为了避免遭到政府禁止，它决定转型为商业实体而非民间实体。其主要目标是将什叶派法学引入摩洛哥政府，建立一个与伊斯兰共和国模式相似但又属于摩洛哥王国的新摩洛哥。"
+ MOR.Kingdom: "£generic_Kingdom_small 复兴与美德党"
+ MOR.Kingdom_desc: "（伊斯兰原教旨主义者） -  复兴与美德党\n\n复兴与美德党是摩洛哥的一个伊斯兰政党，旨在在摩洛哥建立更深层次、更根本的法治。该党得到了摩洛哥社会中右翼势力的支持，其中包括一些有争议的人物，如前伊玛目阿卜杜勒巴里·泽姆扎米，他因其关于恋尸癖或手淫以及女性使用性玩具的荒唐教令而闻名。然而，该党也包括希望在摩洛哥取得进展的萨拉菲派政客。"
+ MOR.Caliphate_desc: "（萨拉菲圣战者）- 摩洛哥伊斯兰战斗组织\n\n摩洛哥伊斯兰战斗组织是一个逊尼派伊斯兰激进组织，活动范围遍布摩洛哥、北非和西欧，其主要目标是在摩洛哥建立伊斯兰政府并推翻君主立宪制。该组织成立于1998年，由曾与穆罕默德·格尔布齐领导的阿拉伯圣战者组织并肩作战的前阿富汗阿拉伯老战士组成。据信该组织主要由西欧各地的摩洛哥侨民组成，他们在北非和欧洲各地都拥有许多潜伏小组。"
+ MOR.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small 正义与发展党"
+ MOR.Neutral_Muslim_Brotherhood_desc: "（伊斯兰民主主义）正义与发展党\n\n正义与发展党成立于1967年底，是一个伊斯兰民主、保皇和民族主义政党。它代表了政治光谱中右翼保守派的一部分，与人民运动分道扬镳。正义与发展党现在是摩洛哥政治光谱中的主要参与者之一。"
+ MOR.Neutral_Autocracy: "£generic_Neutral_Autocracy_small 人民运动"
+ MOR.Neutral_Autocracy_desc: "（君主主义者）- 人民运动\n\n人民运动党由阿卜杜勒克里姆·哈提卜和马哈朱比·阿赫尔丹于1957年创立，是一个君主主义、农村利益和自由主义政党。该党正式层面是一个支持摩洛哥国王的自由主义政党。"
+ MOR.Neutral_green: "£generic_Neutral_green_small 绿色左翼党"
+ MOR.Neutral_green_desc: "（环保主义）- 绿色左翼党\n\n绿色左翼党是摩洛哥的一个绿党，其自称的意识形态是生态社会主义和绿色政治。它是摩洛哥最前沿的绿党，致力于在该国制定更多反气候变化立法、可再生能源和其他绿色政策。"
+ MOR.neutral_Social: "£generic_neutral_Social_small 民主力量阵线"
+ MOR.neutral_Social_desc: "（民主社会主义） - 民主力量阵线\n\n民主力量阵线是一个民主社会主义政党，于1997年从进步与社会主义党分裂出来而成立。"
+ MOR.Neutral_Communism: "£generic_Neutral_Communism_small 民主之路"
+ MOR.Neutral_Communism_desc: "（马克思列宁主义）- 民主之路\n\n1995年由穆斯塔法·布拉马创立，是一个霍查主义共产主义、反复兴主义和反修正主义政党。该党在遭受摩洛哥武装分子近十年的压迫和猖獗的镇压后获得合法地位。"
+ MOR.Nat_Populism: "£generic_Nat_Populism_small 独立民主党"
+ MOR.Nat_Populism_desc: "（右翼民族主义） - 独立民主党\n\n独立民主党于1946年由穆罕默德·哈桑·瓦扎尼在摩洛哥保护国时期创立。该党是一个右翼民族主义政党，热心支持摩洛哥脱离法国和西班牙的统治而独立。"
+ MOR.Nat_Fascism: "£IRQ_Nat_Autocracy_small 阿拉伯解放阵线"
+ MOR.Nat_Fascism_desc: "（摩洛哥复兴党）- 阿拉伯解放阵线\n\n阿拉伯解放阵线是摩洛哥的一个小型政党，其教义与伊拉克复兴党一致。该党在摩洛哥政坛上一直鲜为人知，至今仍是如此。"
+ MOR.Nat_Fascism_CUN: "£generic_Nat_Fascism_small 国家团结集体"
+ MOR.Nat_Fascism_CUN_desc: "（法西斯主义） - 国家团结集体\n\n国家团结集体是2010年代中后期在摩洛哥成立的一个极右翼政党。该党绝大多数成员来自以各种名义开设的在线论坛。许多成员都持有反黑人观点，支持纯白人摩尔人种族和民族。"
