--- a/Changelog.txt
+++ b/Changelog.txt
@@ -154,7 +154,7 @@ v1.10.0
  Map:
   - Revamp Iran region
   - Revamp Somalia region
-  - Revamp Quebec and Greenland
+  - Revamp Quebec
   - Revamp Western Africa
   - Revamp Japan
   - Revamp Nederland
