--- a/Changelog.txt
+++ b/Changelog.txt
@@ -160,6 +160,7 @@ v1.10.0
   - Revamp Nederland
   - Revamp Greenland
   - Adjustment in Afghanistan
+  - Adjustment in Iraq
   - Adjustment in Taiwan Strait
   - Adjustment Qing dynasty border in province level
   - Add Guardafui Channel
